Update 01.Offensive Security Intro.md

--- a/pre-security/01.Offensive Security Intro.md
+++ b/pre-security/01.Offensive Security Intro.md
@@ -1,1 +1,14 @@
+# 🧩 TryHackMe: Offensive Security Intro
+
+## 🔐 실습 주제
+- 가상머신 실
+
+## 🛠 사용 도구 및 명행령어
+```gobuster
+gobuster -u http://fakebank.thm -u wordlist.txt dir
+-u 웹사이트 스캐닝 명령어
+-w 숨겨진 페이지를 찾기 위한 단어 목록 제공
+
+### 배운 점
+공격 방법에 대해 처음으로 실습하는데 어려웠다.
 
