Update 01.Offensive Security Intro.md

--- a/pre-security/01.Offensive Security Intro.md
+++ b/pre-security/01.Offensive Security Intro.md
@@ -7,7 +7,7 @@
 - 가상머신 실행(gobuster)
 
 ## 🛠 사용 도구 및 명행령어
-```gobuster
+gobuster
 gobuster -u http://fakebank.thm -u wordlist.txt dir
 -u 웹사이트 스캐닝 명령어
 -w 숨겨진 페이지를 찾기 위한 단어 목록 제공
