--- a/pre-security/02.Defensive_Security_Intro.md
+++ b/pre-security/02.Defensive_Security_Intro.md
@@ -28,4 +28,4 @@
 공격 방법에 대해 처음으로 실습하는데 어려웠다.
 
 ## 실습 화면 기록
-![실습 결과](images/Defensive Security Intro.png)
+![실습 결과](images/Defensive_Security_Intro.png)
