--- a/pre-security/04.What_is_Networking?.md
+++ b/pre-security/04.What_is_Networking?.md
@@ -24,3 +24,6 @@ ping IP Address(8.8.8.8) or Website URl
 - 이론서로 요약한 개념이 아닌 풀어 쓴 글을 통해 학습하여 이해는 확실히 쉬웠다.
 - 영어를 통해 공부하니 생각보다 진도가 나가지 않았다. 꾸준히 하면 좋아질 것 같다.
 - 들어보고 외우는 것과 이해하는 것의 차이를 알았다.
+
+## 실습 화면 기록
+![실습 결과](images/What_is_Networking?.png)
