--- a/pre-security/04.What_is_Networking?.md
+++ b/pre-security/04.What_is_Networking?.md
@@ -26,4 +26,4 @@ ping IP Address(8.8.8.8) or Website URl
 - 들어보고 외우는 것과 이해하는 것의 차이를 알았다.
 
 ## 실습 화면 기록
-![실습 결과](images/What_is_Networking?.png)
+![실습 결과](images/What_is_Networking.png)
