--- a/pre-security/05.Intro_to_LAN.md
+++ b/pre-security/05.Intro_to_LAN.md
@@ -32,14 +32,23 @@
 (2) A Primer on Subnetting
  - 서브넷팅을 쉽게 표현하자면 하나의 케이크를 여러 사람에게 나눠주기 위해 조각을 내는 것이다.
  - 이때의 케이크를 네트워크로 생각하면 쉽다. 조각들의 구분은 서브넷 마스크라는 번호를 통해 구별한다.
- - Network Address :
- - Host Address :
- - Default Gateway : 
- - 
+ - Network Address : 네트워크의 시작을 구분해준다. 네트워크의 유무를 판단하는데 사용된다.
+ - Host Address : 기기의 서브넷을 구분하는데 사용되는 IP이다.
+ - Default Gateway : 네트워크에 소속된 기기에 부여되는 특별한 주소로, 다른 네트워크로 정보를 전송할 수 있다.
+
+(3) ARP
+ - ARP(Address Resolution Protocol) : IP주소를 바탕으로 MAC주소를 알아내는 프로토콜이다.
+ - ARP Request를 통해 질문을 하고 ARP Reply를 받아 MAC주소를 알아낸다.
+
+(4) DHCP
+ - DHCP Discover : 나 IP 좀 줄 수 있어?
+ - DHCP Offer : 좋아, IP(8.8.8.8) 줄게.
+ - DHCP Request : 고마워, 나 이제부터 이 IP(8.8.8.8) 쓰기 시작할게.
+ - DHCP ACK : 좋아, 그 IP는 앞으로 24시간 동안 쓸 수 있어. 
 ## 느낀 점
-- 이론서로 요약한 개념이 아닌 풀어 쓴 글을 통해 학습하여 이해는 확실히 쉬웠다.
-- 영어를 통해 공부하니 생각보다 진도가 나가지 않았다. 꾸준히 하면 좋아질 것 같다.
-- 들어보고 외우는 것과 이해하는 것의 차이를 알았다.
+- 개념은 진작에 외우고 있었다. 하지만 풀어 쓴 글로 보니 이해하기가 정말 수월했다.
+- 정보처리기사 공부할 때 본 내용이라 친숙한 느낌이 났다.
+- 쉽사리 진도가 나가지 않아 조금 조급한 마음이다.
 
 ## 실습 화면 기록
 ![실습 결과](images/What_is_Networking.png)
