--- a/pre-security/07.Packets&Frames.md
+++ b/pre-security/07.Packets&Frames.md
@@ -1,7 +1,7 @@
 ## TryHackMe: Packets&Frames
 
 ## 실습 일시
-- 2024-05-27
+- 2024-05-28
 
 ## 실습 주제
 (1) What are Packets and Frames?
@@ -16,7 +16,40 @@
  - 이 프로토콜은 크게 Application, Transport, Internet, Network Interface 4가지 계층으로 이루어져 있다.
  - 데이터 혹은 패킷은 이 계층들을 지나면서 전송된다. 이러한 과정을 캡슐화라고 하고, 그 반대를 decapsulation이라 한다.
  - TCP는 연결 지향인 프로토콜로, 데이터를 보내기 전에 반드시 각 기기들을 연결해야 한다. 이때 필요한 연결 과정을 Three-way handshake라 한다.
- - TCP 패킷들은 캡슐화 과정에서 헤더를 가져 다양한 정보들을 가진다.   
+ - TCP 패킷들은 캡슐화 과정에서 헤더를 가져 다양한 정보(Source port, Destination Port, Sequence number 등)들을 가진다.
+ - three-way handshaking 시에는 sequence number을 사용한다.
+ - TCP연결을 끊을 시에는 FIN패킷을 송신해 종료를 알리고 그에 대한 대답인 ACK패킷을 수신한다.ㅋ
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+   
 (3) UDP/IP
 
 ## 사용 도구 및 명행령어
