--- a/pre-security/13.Linux_Fundamentals_Part_1.md
+++ b/pre-security/13.Linux_Fundamentals_Part_1.md
@@ -26,11 +26,12 @@
 (5) Interacting With the Filesystem
  - 로그인과 관련 있는 명령어
    1) ls : listing, Listing Files in Our Current Directory
-   2) cd : change diretory
-   4) cat : concatenate
-   5) pwd : print working directory
+   2) cd : change diretory, 명령어를 입력하는 폴더를 바꾼다.
+   4) cat : concatenate, 파일을 읽고 그 파일의 내용을 출력한다.
+   5) pwd : print working directory, 현재 사용자가 작업하고 있는 디렉터리 경로를 출력한다.
 
 (6) Searching for Files
+ - ls, cd 명령어는 하나하나 찾아보고 가는 것이기에 비효율적이다. 이러한 단점을 극복한 명령어가 find이다. find 명령어는 이러한 과정을 자동화해준다.
 
 (7) An Introduction to Shell Operators
 
@@ -42,8 +43,11 @@
  - ~$ echo Hello : Hello
  - ~$ echo "Hello Friend!" : Hello Friend!
  - ~$ whoami : tryhackme
- - ~$ ls : access.log folder1
-
+ - ~$ ls : access.log folder1 folder2 folder3 folder4
+ - ~$ mv folder1 ImportantFiles : change folder1 name to ImportantFiles
+ - ~$ cd ImportantFiles : change directiory ~/ImportantFiles$
+ - ~$ cat todo.txt : Here's something important for me to do later!
+ - ~$ pwd : /home/tryhackme/Pictures 
  
 ## 배운 점
  - 민감 정보 노출이나 HTML Injection에 대한 개념은 정보보안기사를 준비하면서 알긴 알았었다. 알았지만 실기 문제는 풀 수 없었다.
