--- a/pre-security/13.Linux_Fundamentals_Part_1.md
+++ b/pre-security/13.Linux_Fundamentals_Part_1.md
@@ -32,10 +32,19 @@
 
 (6) Searching for Files
  - ls, cd 명령어는 하나하나 찾아보고 가는 것이기에 비효율적이다. 이러한 단점을 극복한 명령어가 find이다. find 명령어는 이러한 과정을 자동화해준다.
+ - 파인드 명령어는 찾고자 하는 파일이 조건에 맞을 수 있도록 적당한 조건을 두고 그 조건에 해당하는 파일들을 전부 찾아 보여준다.
+ - grep 명령어도 find 명령어와 같이 굉장히 유용한 명령어로, find와 다른 점은 이름이나 파일 형식에 조건을 두는 것이 아니라 파일 안의 내용에 대해 조건을 걸 수 있다는 것이다.
+ - 그렇기에 grep 명령어는 주로 로그파일을 분석할 시 사용된다.
 
 (7) An Introduction to Shell Operators
+ - Linux Operators(연산자)
+   1) & : 터미널에서 사용자의 명령어가 실행될 수 있게 한다.
+   2) && : 터미널에서 여러 개의 명령어를 한 줄로 같이 처리할 수 있게 해준다.
+   3) > : 일종의 리디렉터로, cat 명령어와 동일한 결과를 갖게 해준다. 인덱스 느낌이다.
+   4) >> : > 명령어와 동일한 역할로, 다른 점은 대체가 아닌 첨가에 가까운 느낌이란 것이다. 인덱스인 것은 동일한데 기존의 인덱스를 덮어쓰는 것이 아니라 인덱스를 추가하는 느낌이다.
 
 (8) Conclusions & Summaries
+ - 이제까지의 간단 요약
 
 
 ## 사용 도구 및 명행령어   
@@ -47,18 +56,22 @@
  - ~$ mv folder1 ImportantFiles : change folder1 name to ImportantFiles
  - ~$ cd ImportantFiles : change directiory ~/ImportantFiles$
  - ~$ cat todo.txt : Here's something important for me to do later!
- - ~$ pwd : /home/tryhackme/Pictures 
+ - ~$ pwd : /home/tryhackme/Pictures
+ - ~$ find -name passwords.txt : ./folder1/passwords.txt
+ - ~$ find -name *.txt : ./folder1/passwords.txt, ./Documents/todo.txt
+ - ~$ grep "81.143..211.90" access.log : 81.143.211.90 - - [25/Mar/2021:11:17 + 0000] "GET/HTTP/1.1" 200 417 "-" "Mozilla/5.0 (Linux; Android 7.0; Moto G(4))"
+ - ~$ echo Hello > World
  
 ## 배운 점
- - 민감 정보 노출이나 HTML Injection에 대한 개념은 정보보안기사를 준비하면서 알긴 알았었다. 알았지만 실기 문제는 풀 수 없었다.
- - 이렇게 실습을 해보니 실기 문제를 어떻게 풀어야 할지 감이 잡힌 느낌이다.
+ - 리눅스에 대해 아주 기초적인 명령어들을 중심으로 얇고 넓게 배웠다.
+ - 터미널에서 예를 들면서 어떻게 명령어들을 쓰고 파일시스템을 이해해야 할지를 배웠다.
 
 
 ## 느낀 점
- - 이렇게 실습을 하고 개념들을 배워보니 내가 한걸음 한걸음씩 나아가는 느낌이 든다.
- - 기사 공부로 내가 시간을 날리고 있다고 생각하고 있었는데 이렇게 실습일지를 하나씩 남기고 있으니 알찬 느낌이 든다.
- - 오늘 이렇게 배운 내용들 특히 HTML Injection부분은 내가 훗날 일을 하고 문제에 직면했을 때 생각날 것 같다.
+ - 리눅스에 대한 실습은 처음이어서 많이 신선했다. 학교나 프로젝트를 할 때는 리눅스를 쓸 일이 없어서 이번이 처음이었는데 은근 재밌었던 것 같다.
+ - 정보보안기사 실기를 준비하는데 리눅스 실습에 대한 내용이 많이 나왔다. 하지만 나는 리눅스 실습을 한 적이 없어서 해설을 봐도 이해가 가지 않았다. 하지만 지금이라면 이해할 수 있을 것 같다.
+ - 실무에서는 리눅스를 많이 사용한다고 하는데 내가 잘 적응할 수 있을지 모르겠다. 그래도 이대로만 가면 잘 할 수 있을 거라는 생각이 들기도 한다.
 
 
 ## 실습 화면 기록
-![실습 결과](images/How_Websites_Work.png)
+![실습 결과](images/Linux_Fundamentals_Part_1.png)
