--- a/pre-security/13.Linux_Fundamentals_Part_1.md
+++ b/pre-security/13.Linux_Fundamentals_Part_1.md
@@ -67,6 +67,11 @@
  - 터미널에서 예를 들면서 어떻게 명령어들을 쓰고 파일시스템을 이해해야 할지를 배웠다.
 
 
+## 실무 적용 가능성
+ - 보안 실무에서 리눅스 서버 로그 분석, 계정 탐색, 파일 추적에 grep과 find는 필수적이다.
+ - 리눅스 환경에 익숙해지는 것은 침해 분석, 포렌식, 서버 보안 설정 등 거의 모든 보안 실무의 기반이 된다.
+
+
 ## 느낀 점
  - 리눅스에 대한 실습은 처음이어서 많이 신선했다. 학교나 프로젝트를 할 때는 리눅스를 쓸 일이 없어서 이번이 처음이었는데 은근 재밌었던 것 같다.
  - 정보보안기사 실기를 준비하는데 리눅스 실습에 대한 내용이 많이 나왔다. 하지만 나는 리눅스 실습을 한 적이 없어서 해설을 봐도 이해가 가지 않았다. 하지만 지금이라면 이해할 수 있을 것 같다.
