--- a/pre-security/14.Linux_Fundamentals_Part_2.md
+++ b/pre-security/14.Linux_Fundamentals_Part_2.md
@@ -1,7 +1,7 @@
 ## TryHackMe: Linux Fundamentals Part 2
 
 ## 실습 일시
- - 2025-06-14
+ - 2025-06-14~17
 
 ## 실습 주제
 (1) Introduction 
@@ -11,69 +11,64 @@
    3) 관리되고 있는 파일이나 폴더들에 대해 어떻게 접근하고 어떻게 접근을 구별할 것인지 알아내기
 
 (2) Accessing Your Linux Machine using SSH (Deploy)
- - 이번에는 내 컴퓨터에 가상 머신을 만들어서 실습을 할 것이 아니라 SSH(Secure SHell)을 이용한 원격 가상머신으로 실습할 것이다.
- - SSH(Secure SHell)은 간단히 말하자면 기기 간 데이터 전송 시 데이터를 암호화한 형태로 바꿔주는 프로토콜이다. 인터넷을 떠도는 데이터의 보안성을 높인다. 
-(3) Introduction to Flags and Switches
- - 리눅스 가상 머신 생성
+ - 원격 리눅스 머신을 사용하기 위해 SSH(Secure SHell) 프로토콜을 사용한다. 이 프로토콜을 이용하여 우리는 떨어져 있는 리눗그 머신에 명령어를 보낼 수 있다.
+ - SSH프로토콜은 간단히 말하면 인터넷을 통한 데이터 전송 시 데이터를 암호화하거나 복호화하여 데이터 전송의 보안성을 높이는 작업이다.
+
+(3) Introduction to Flags and Switches 
+ - 명령어들은 각각의 역할을 수행하기 위해 그에 필요한 권한(규약)을 가진다. 그리고 이러한 규약들은 플래그나 스위치로 알려져 있는 특정 키워드들을 통해 구분한다.
+ - 매뉴얼 페이지(man) : 리눅스 머신에서 사용할 수 있는 명령어들이나 응용 프로그램들의 모음
 
 (4) Filesystem Interaction Continued
- - 우분투 같은 가상머신들은 가볍다는 장점이 있지만 그 장점들로 인해 단점들도 존재한다.
- - 가성머신은 GUI(Graphical User Interface)가 아닌 CLI(Command Line Interface)로 이루어져 있다.
- - 그렇기에 대부분의 의사소통은 테스트 기반인 터미널을 통해 이루어진다.
- - 가장 기본적인 명령어
-   1) echo : 우리가 원하는 출력값 전부를 보여준다.
-   2) whoami : 현재 사용자가 무엇으로 로그인했는지를 보여준다.
+ - 여기서는 전에 find, cd 명령어를 배웠던 것처럼 파일시스템에서 파일이나 폴더를 찾을 수 있는 명령어에 대해 배운다.(예: 파일이나 폴더의 생성, 이동, 삭제)
+   1) touch : 파일을 생성하는 명령어
+   2) mkdir(make directory) : 폴더를 생성하는 명령어
+   3) cp(copy) : 파일이나 폴더를 복사하는 명령어
+   4) mv(move) : 파일이나 폴더의 위치를 이동는 명령어
+   5) rm(remove) : 파일이나 폴더를 제거하는 명령어
+   6) file(file) : 파일의 형식을 결정하는 명령어. 형식자를 만든다. 
 
 (5) Permissions 101
- - 로그인과 관련 있는 명령어
-   1) ls : listing, Listing Files in Our Current Directory
-   2) cd : change diretory, 명령어를 입력하는 폴더를 바꾼다.
-   4) cat : concatenate, 파일을 읽고 그 파일의 내용을 출력한다.
-   5) pwd : print working directory, 현재 사용자가 작업하고 있는 디렉터리 경로를 출력한다.
+ - 우리는 이전 과목에서 명령어들과 와 함께 사용하는 플래그들을 배웠다.
+ - 이제 그에 맞는 실습을 할 것인데 그 중 중요한 rwx(Read, Write, Execute) 권한에 대해서 설명하겠다.
+ - 리눅스 사용자를 두가지로 나누자면 사용자와 그룹으로 나눌 수 있는데 리눅스는 사용자 각각에 대해 서로 다른 권하의 집합을 줄 수 있다.
+ - 사용자 권한과 그에 대한 명령어
+   1) su : 로그인 사용자를 변경한다. 윈도우 파일 시스템으로 비유하자면 C드라이브알 D드라이브를 바꾸는 느낌이다.
 
 (6) Common Diretories
- - ls, cd 명령어는 하나하나 찾아보고 가는 것이기에 비효율적이다. 이러한 단점을 극복한 명령어가 find이다. find 명령어는 이러한 과정을 자동화해준다.
- - 파인드 명령어는 찾고자 하는 파일이 조건에 맞을 수 있도록 적당한 조건을 두고 그 조건에 해당하는 파일들을 전부 찾아 보여준다.
- - grep 명령어도 find 명령어와 같이 굉장히 유용한 명령어로, find와 다른 점은 이름이나 파일 형식에 조건을 두는 것이 아니라 파일 안의 내용에 대해 조건을 걸 수 있다는 것이다.
- - 그렇기에 grep 명령어는 주로 로그파일을 분석할 시 사용된다.
+ - /etc : 이 루트 디렉토리는 시스템에서 가장 중요한 루트 디렉터리 중 하나로, 운영체제에서 사용되는 시스템 파일들을 저장하는 루트 디렉토리이다. shadow파일과 passwd파일을 가지고 있다.
+ - /var : 리눅스 설치 시에 찾을 수 있는 루트 폴더로, 시스템에서 사용되는 서비스나 응용프로그램에 빈번하게 접속하거나 사용되는 데이되들을 저장하는 폴더이다. 로그 파일들이 이곳에 있다.
+ - /root : /home 디렉터리와 다르게 루트 디렉터리 시스템 사용자가 가질 수 있는 가장 근원적인 디렉터리이다. 이 디렉터리에 접근할 수 있는 사용자는 기본적으로 root 뿐이다.
+ - /tmp : /var 디렉터리와 같이 리눅스 설치 시에 찾을 수 있다. 일시적으로 필요한 데이터들이 저장되는 디렉토리로 컴퓨터가 꺼지면 내용은 지워지고 빈 폴더 상태가 된다. 
 
 (7) Conclusions and Summaries
- - Linux Operators(연산자)
-   1) & : 터미널에서 사용자의 명령어가 실행될 수 있게 한다.
-   2) && : 터미널에서 여러 개의 명령어를 한 줄로 같이 처리할 수 있게 해준다.
-   3) > : 일종의 리디렉터로, cat 명령어와 동일한 결과를 갖게 해준다. 인덱스 느낌이다.
-   4) >> : > 명령어와 동일한 역할로, 다른 점은 대체가 아닌 첨가에 가까운 느낌이란 것이다. 인덱스인 것은 동일한데 기존의 인덱스를 덮어쓰는 것이 아니라 인덱스를 추가하는 느낌이다.
+ - 이제까지 뭘 배웠는지에 대한 요약
 
 ## 사용 도구 및 명행령어   
- - ~$ enter commands here : Command 'enter' not found, did you mean:
- - ~$ echo Hello : Hello
- - ~$ echo "Hello Friend!" : Hello Friend!
- - ~$ whoami : tryhackme
- - ~$ ls : access.log folder1 folder2 folder3 folder4
- - ~$ mv folder1 ImportantFiles : change folder1 name to ImportantFiles
- - ~$ cd ImportantFiles : change directiory ~/ImportantFiles$
- - ~$ cat todo.txt : Here's something important for me to do later!
- - ~$ pwd : /home/tryhackme/Pictures
- - ~$ find -name passwords.txt : ./folder1/passwords.txt
- - ~$ find -name *.txt : ./folder1/passwords.txt, ./Documents/todo.txt
- - ~$ grep "81.143..211.90" access.log : 81.143.211.90 - - [25/Mar/2021:11:17 + 0000] "GET/HTTP/1.1" 200 417 "-" "Mozilla/5.0 (Linux; Android 7.0; Moto G(4))"
- - ~$ echo Hello > World
+ - 리눅스 가상머신 접속
+   1) ssh tryhackme@10.10.1.233 ## tryhackme : 사용자 계정명, 10.10.1.233 : 리눅스 가상머신 주소
+ - -a : 플래그 중 하나로, 숨겨져 있는 폴더도 전부 보이게 만든다.
+ - --help : ls 명령어로 들어나는 파일아니 폴더에 대한 정보를 출력한다.
+ - man : 폴더나 파일에 대해 사용할 수 있는 명령어나 플래그들을 알려준다.
+ - su suer2 : 로그인한 사용자를 "user2"로 바꾼다.
+ - ls lh : 현재 폴더의 파일이나 폴더에 대한 정보를 출력한다. 출력된 정보 중 가장 중요한 것은 rwx권한에 대한 내용이다.
  
 ## 배운 점
- - 리눅스에 대해 아주 기초적인 명령어들을 중심으로 얇고 넓게 배웠다.
- - 터미널에서 예를 들면서 어떻게 명령어들을 쓰고 파일시스템을 이해해야 할지를 배웠다.
+ - 원격 리눅스 머신 접속 방법, 명령어에 붙여 사용하는 플래그들, 리눅스 디렉터리에는 어떤 것들이 있는지 배웠다.
+ - 명령어들은 전 모듈에서 배웠고 이번에는 플래그들을 배웠는데 각 명령어마다 사용할 수 있는 플래그들이 달라 배우는데 재미가 있었다.
+ - su 명령어를 통한 사용자 계정 전환에 대해 배웠는데 정보보안기사 실기에서 봤던 내용이라 복습을 하는 느낌이 들었다.
 
 
 ## 실무 적용 가능성
- - 보안 실무에서 리눅스 서버 로그 분석, 계정 탐색, 파일 추적에 grep과 find는 필수적이다.
- - 리눅스 환경에 익숙해지는 것은 침해 분석, 포렌식, 서버 보안 설정 등 거의 모든 보안 실무의 기반이 된다.
+ - 만약 내가 일하는 회사에서 리눅스를 사용한다면 오늘 배운 명령어들이나 플래그들은 전부 쓸 것 같다.
+ - 하나의 서버를 두고 여러 사용자가 서버에 대한 작업을 한다면 계정 전환을 할 상황이 생길텐데 그러면 su명령을 쓰지 않을까 생각한다.
+ - 각각의 루트 디렉터리들도 로그 파일이나 사용자에 대한 정보를 찾을 때 사용할 것 같다. 
 
 
 ## 느낀 점
- - 리눅스에 대한 실습은 처음이어서 많이 신선했다. 학교나 프로젝트를 할 때는 리눅스를 쓸 일이 없어서 이번이 처음이었는데 은근 재밌었던 것 같다.
- - 정보보안기사 실기를 준비하는데 리눅스 실습에 대한 내용이 많이 나왔다. 하지만 나는 리눅스 실습을 한 적이 없어서 해설을 봐도 이해가 가지 않았다. 하지만 지금이라면 이해할 수 있을 것 같다.
- - 실무에서는 리눅스를 많이 사용한다고 하는데 내가 잘 적응할 수 있을지 모르겠다. 그래도 이대로만 가면 잘 할 수 있을 거라는 생각이 들기도 한다.
+ - 리눅스에 대해 본격적으로 배우니 그동안 의문이었던 것들이 조금씩 풀리는 느낌이 들었다.
+ - 특히 su 명령과 같은 명령어들은 실습을 하지 않으면 이해하기가 어려워서 기사 실기 준비시 이해가 되지 않았었는데 오늘 일지를 정리하면서 해결의 실마리가 보였다.
+ - 리눅스 가상머신을 사용하여 실습을 하니 실무를 하는 느낌이 들어 미래 그리고 취업에 대한 불안감이 약간 줄어들었다. 
 
 
 ## 실습 화면 기록
-![실습 결과](images/Linux_Fundamentals_Part_1.png)
+![실습 결과](images/Linux_Fundamentals_Part_2.png)
