--- a/pre-security/15.Linux_Fundamentals_Part_3.md
+++ b/pre-security/15.Linux_Fundamentals_Part_3.md
@@ -5,20 +5,18 @@
 
 ## 실습 주제
 (1) Introduction 
- - 이번 모듈에서 배울 것
-   1) 플래그들과 규약들을 사용하여 몇몇의 중요한 명령어들 배우기
-   2) 파일 복사나 파일 이동과 같은 실용적인 명령어들을 배우면서 파일시스템에 대한 이해도 높이기
-   3) 관리되고 있는 파일이나 폴더들에 대해 어떻게 접근하고 어떻게 접근을 구별할 것인지 알아내기
+ - 공부하거나 일하면서 계속 사용할 것 같은 유틸리티나 응용프로그램을 배운다.
+ - automation, package management 그리고 service/application logging을 배우면서 리눅스에 대한 지식을 넓히겠다.
 
-(2) Accessing Your Linux Machine using SSH (Deploy)
+(2) Deploy Your Linux Machine
  - 원격 리눅스 머신을 사용하기 위해 SSH(Secure SHell) 프로토콜을 사용한다. 이 프로토콜을 이용하여 우리는 떨어져 있는 리눗그 머신에 명령어를 보낼 수 있다.
  - SSH프로토콜은 간단히 말하면 인터넷을 통한 데이터 전송 시 데이터를 암호화하거나 복호화하여 데이터 전송의 보안성을 높이는 작업이다.
 
-(3) Introduction to Flags and Switches 
+(3) Terminal Text Editors
  - 명령어들은 각각의 역할을 수행하기 위해 그에 필요한 권한(규약)을 가진다. 그리고 이러한 규약들은 플래그나 스위치로 알려져 있는 특정 키워드들을 통해 구분한다.
  - 매뉴얼 페이지(man) : 리눅스 머신에서 사용할 수 있는 명령어들이나 응용 프로그램들의 모음
 
-(4) Filesystem Interaction Continued
+(4) General/Useful Utilities
  - 여기서는 전에 find, cd 명령어를 배웠던 것처럼 파일시스템에서 파일이나 폴더를 찾을 수 있는 명령어에 대해 배운다.(예: 파일이나 폴더의 생성, 이동, 삭제)
    1) touch : 파일을 생성하는 명령어
    2) mkdir(make directory) : 폴더를 생성하는 명령어
@@ -27,21 +25,24 @@
    5) rm(remove) : 파일이나 폴더를 제거하는 명령어
    6) file(file) : 파일의 형식을 결정하는 명령어. 형식자를 만든다. 
 
-(5) Permissions 101
+(5) Processes 101
  - 우리는 이전 과목에서 명령어들과 와 함께 사용하는 플래그들을 배웠다.
  - 이제 그에 맞는 실습을 할 것인데 그 중 중요한 rwx(Read, Write, Execute) 권한에 대해서 설명하겠다.
  - 리눅스 사용자를 두가지로 나누자면 사용자와 그룹으로 나눌 수 있는데 리눅스는 사용자 각각에 대해 서로 다른 권하의 집합을 줄 수 있다.
  - 사용자 권한과 그에 대한 명령어
    1) su : 로그인 사용자를 변경한다. 윈도우 파일 시스템으로 비유하자면 C드라이브알 D드라이브를 바꾸는 느낌이다.
 
-(6) Common Diretories
+(6) Maintaining Your System:Automation
  - /etc : 이 루트 디렉토리는 시스템에서 가장 중요한 루트 디렉터리 중 하나로, 운영체제에서 사용되는 시스템 파일들을 저장하는 루트 디렉토리이다. shadow파일과 passwd파일을 가지고 있다.
  - /var : 리눅스 설치 시에 찾을 수 있는 루트 폴더로, 시스템에서 사용되는 서비스나 응용프로그램에 빈번하게 접속하거나 사용되는 데이되들을 저장하는 폴더이다. 로그 파일들이 이곳에 있다.
  - /root : /home 디렉터리와 다르게 루트 디렉터리 시스템 사용자가 가질 수 있는 가장 근원적인 디렉터리이다. 이 디렉터리에 접근할 수 있는 사용자는 기본적으로 root 뿐이다.
  - /tmp : /var 디렉터리와 같이 리눅스 설치 시에 찾을 수 있다. 일시적으로 필요한 데이터들이 저장되는 디렉토리로 컴퓨터가 꺼지면 내용은 지워지고 빈 폴더 상태가 된다. 
 
-(7) Conclusions and Summaries
- - 이제까지 뭘 배웠는지에 대한 요약
+(7) Maintaining Your System:Package Management
+
+(8) Maintaining Your System:Logs
+
+(9) Conclusions&Summaries
 
 ## 사용 도구 및 명행령어   
  - 리눅스 가상머신 접속
