--- a/pre-security/15.Linux_Fundamentals_Part_3.md
+++ b/pre-security/15.Linux_Fundamentals_Part_3.md
@@ -1,7 +1,7 @@
 ## TryHackMe: Linux Fundamentals Part 3
 
 ## 실습 일시
- - 2025-06-17
+ - 2025-06-18
 
 ## 실습 주제
 (1) Introduction 
@@ -9,50 +9,70 @@
  - automation, package management 그리고 service/application logging을 배우면서 리눅스에 대한 지식을 넓히겠다.
 
 (2) Deploy Your Linux Machine
- - 원격 리눅스 머신을 사용하기 위해 SSH(Secure SHell) 프로토콜을 사용한다. 이 프로토콜을 이용하여 우리는 떨어져 있는 리눗그 머신에 명령어를 보낼 수 있다.
- - SSH프로토콜은 간단히 말하면 인터넷을 통한 데이터 전송 시 데이터를 암호화하거나 복호화하여 데이터 전송의 보안성을 높이는 작업이다.
+ - 리눅스 가상머신과 공격 가상 머신 실행
+ - ssh tryhackme@10.10.228.107 ## tryhackme : 사용자 계정명, 10.10.228.107 : 가상 리눅스 머신 주소
 
 (3) Terminal Text Editors
- - 명령어들은 각각의 역할을 수행하기 위해 그에 필요한 권한(규약)을 가진다. 그리고 이러한 규약들은 플래그나 스위치로 알려져 있는 특정 키워드들을 통해 구분한다.
- - 매뉴얼 페이지(man) : 리눅스 머신에서 사용할 수 있는 명령어들이나 응용 프로그램들의 모음
+ - nano : 터미널에서 사용 가능한 텍스트 에디터.  이 텍스트 에디터가 더 진화하면 VIM이라고 불린다.
+ - VIM : nano에서 진화한 텍스트 에디터로, 키보드 커스텀이 가능하고 텍스트 하이라이트 등 심화된 기능들을 사용할 수 있다.
 
 (4) General/Useful Utilities
- - 여기서는 전에 find, cd 명령어를 배웠던 것처럼 파일시스템에서 파일이나 폴더를 찾을 수 있는 명령어에 대해 배운다.(예: 파일이나 폴더의 생성, 이동, 삭제)
-   1) touch : 파일을 생성하는 명령어
-   2) mkdir(make directory) : 폴더를 생성하는 명령어
-   3) cp(copy) : 파일이나 폴더를 복사하는 명령어
-   4) mv(move) : 파일이나 폴더의 위치를 이동는 명령어
-   5) rm(remove) : 파일이나 폴더를 제거하는 명령어
-   6) file(file) : 파일의 형식을 결정하는 명령어. 형식자를 만든다. 
+ - wget : 브라우저에서 파일을 다운받는 것처럼 HTTP프로토콜을 사용하여 웹에서 파일을 다운로드할 수 있게 하는 유틸리티이다.
+ - wget을 사용하려면 다운로드 받고 싶은 파일의 정확한 주소를 알아야 한다.
+ - SCP(Secure Copy) :  cp명령어와 비슷하지만 그것에서 암호화와 인증 과정을 추가하여 보안성을 높인다.
+ - web : 터미널을 통하여 디렉터리나 파일을 웹에 업로드한다. 이때의 업로드는 파이선을 사용한다.
 
 (5) Processes 101
- - 우리는 이전 과목에서 명령어들과 와 함께 사용하는 플래그들을 배웠다.
- - 이제 그에 맞는 실습을 할 것인데 그 중 중요한 rwx(Read, Write, Execute) 권한에 대해서 설명하겠다.
- - 리눅스 사용자를 두가지로 나누자면 사용자와 그룹으로 나눌 수 있는데 리눅스는 사용자 각각에 대해 서로 다른 권하의 집합을 줄 수 있다.
- - 사용자 권한과 그에 대한 명령어
-   1) su : 로그인 사용자를 변경한다. 윈도우 파일 시스템으로 비유하자면 C드라이브알 D드라이브를 바꾸는 느낌이다.
+ - 프로세스는 컴퓨터에서 실행되고 잇는 프로그램으로 커널에 의해 관리된다. 각 프로세스들은 PID라는 고유 아이디를 가지고 있다.
+ - pid가 1인 프로세스는 부팅 과정에서 생성된 프로세스이다. 그 뒤로 프로세스는 발생 순서에 따라 순차적인 pid를 가진다.
+ - ps : 프로세스를 보여주는 명령어로 프로세스에 대한 pid, status code와 같은 여러 정보들을 출력한다.
+ - top : 프로세스의 통계적 정보를 출력한다.
+ - kill : 프로세스를 갈제종료시키는 명령어이다. 몇몇의 시그널을 가진다.
+   1) SIGTERM : 프로세스는 죽이고 클린업도 진행한다.
+   2) SIGKILL : 프로세스는 죽이되, 클린업하지 않는다.
+   3) SIGSTOP : 프로세스를 중단한다.
+ - systemctl : systemd 프로세스나 데몬에 접속할 수 있는 명령어이다. 사용 방법은 systemctl [option] [service] 이다.
+ - fg :  백그라운드에 있는 프로세스를 프론트로 가져오는 명령어이다.
 
 (6) Maintaining Your System:Automation
- - /etc : 이 루트 디렉토리는 시스템에서 가장 중요한 루트 디렉터리 중 하나로, 운영체제에서 사용되는 시스템 파일들을 저장하는 루트 디렉토리이다. shadow파일과 passwd파일을 가지고 있다.
- - /var : 리눅스 설치 시에 찾을 수 있는 루트 폴더로, 시스템에서 사용되는 서비스나 응용프로그램에 빈번하게 접속하거나 사용되는 데이되들을 저장하는 폴더이다. 로그 파일들이 이곳에 있다.
- - /root : /home 디렉터리와 다르게 루트 디렉터리 시스템 사용자가 가질 수 있는 가장 근원적인 디렉터리이다. 이 디렉터리에 접근할 수 있는 사용자는 기본적으로 root 뿐이다.
- - /tmp : /var 디렉터리와 같이 리눅스 설치 시에 찾을 수 있다. 일시적으로 필요한 데이터들이 저장되는 디렉토리로 컴퓨터가 꺼지면 내용은 지워지고 빈 폴더 상태가 된다. 
+ - Crontab : 부트 과정 시 생성되는 프로세스 중 하나로, cron job을 용이하게 하고 관리하는 역할을 한다. 6개의 특정 값을 가진다.
+   1) MIN : 언제 실행됐는지 분으로 표시
+   2) HOUR : 언제 실행됐는지 시로 표시
+   3) DOM : 언제 실행됐는지 일로 표시 
+   4) MON : 언제 실행됐는지 월로 표시
+   5) DOW : 언제 실행됐는지 요일로 표시
+   6) CMD : 실제 실행될 명령어를 표시
+ - *를 사용할 수 있다. crontab -e 명령어를 통해 편집 가능하다.
 
 (7) Maintaining Your System:Package Management
+ - 개발자가 소프트웨어를 커뮤니티에 제출할 때 'apt' 저장소의 형태로 제출한다. 만약 문제가 없다면 그때는 대중에게 배포된다.
+ - add-apt-repository : 저장소를 추가할 때 사용하는 명령어이다.
+ - 나머지 apt key에 대한 부분은 이해가 안되는 관계로 다음 기회가 있을 때 보자
 
 (8) Maintaining Your System:Logs
+ - 기존 파트1에서 우리들은 로그에 대해 간단히 배웠다. /var/log 디렉터리에서 시스템에서 실행되는 파일과 폴더에 대한 로그에 대한 정보를 저장한다.
+ - 운영체제는 이러한 로그 파일들을 잘 관리하는데 이러한 운영체제의 행위를 'rotating'이라 한다.
+ - 이번에 우리들은 크게 3가지 서비스에 집중할 것이다.
+   1) An Apache2 web Server
+   2) Logs for the fail2ban sevice, 무작위 대입 공격을 관리할 때 이용 가능
+   3) The UFW sevice, 방화벽에 사용
+ - 이 세 서비스와 로그들은 시스템 보안에서 큰 역할을 담당한다.
 
 (9) Conclusions&Summaries
+ - 지금까지의 요약약
 
 ## 사용 도구 및 명행령어   
  - 리눅스 가상머신 접속
-   1) ssh tryhackme@10.10.1.233 ## tryhackme : 사용자 계정명, 10.10.1.233 : 리눅스 가상머신 주소
- - -a : 플래그 중 하나로, 숨겨져 있는 폴더도 전부 보이게 만든다.
- - --help : ls 명령어로 들어나는 파일아니 폴더에 대한 정보를 출력한다.
- - man : 폴더나 파일에 대해 사용할 수 있는 명령어나 플래그들을 알려준다.
- - su suer2 : 로그인한 사용자를 "user2"로 바꾼다.
- - ls lh : 현재 폴더의 파일이나 폴더에 대한 정보를 출력한다. 출력된 정보 중 가장 중요한 것은 rwx권한에 대한 내용이다.
- 
+   1) ssh tryhackme@10.10.1.233 ## tryhackme : 사용자 계정명, 10.10.1.233 : 리눅스 가상머신 주소 -> 그냥 사용자 로그인 생각하면 이걸로 하
+ - nano myfile : 파일 이름이 "myfile"인 파일을 터미널에서 텍스트 작업이 가능하도록 한다. 테그스트 찾기나 복사 같은 메모장에서 할 수 있는 어지간한 일은 전부 할 수 있다.
+ - scp filename.type browsername@IpAddress:/filedirectory : 브라우저를 통해 해당 디렉터리에 있는 파일을 다운로드한다.
+ - web을 이요한 파일 업로드와 다운로드 과정
+   1) python3 -m http.server
+   2) wget http://10.10.228.107:8000/myfile.txt
+   3) scp myfile.txt ubuntu@10.10.228.107
+  - ps : 프로세스에 대한 여러 정보들을 출력한다.
+  - ps aux : 사용자의 프로세스 뿐만 아니라 다른 사용자의 프로세스의 정보까지도 출력한다.
+  - kill 1377 : 프로세스 아이디가 1377인 프로세스를 강제종료시킨다.
 ## 배운 점
  - 원격 리눅스 머신 접속 방법, 명령어에 붙여 사용하는 플래그들, 리눅스 디렉터리에는 어떤 것들이 있는지 배웠다.
  - 명령어들은 전 모듈에서 배웠고 이번에는 플래그들을 배웠는데 각 명령어마다 사용할 수 있는 플래그들이 달라 배우는데 재미가 있었다.
