--- a/pre-security/15.Linux_Fundamentals_Part_3.md
+++ b/pre-security/15.Linux_Fundamentals_Part_3.md
@@ -1,7 +1,9 @@
 ## TryHackMe: Linux Fundamentals Part 3
 
+
 ## 실습 일시
  - 2025-06-18
+
 
 ## 실습 주제
 (1) Introduction 
@@ -59,11 +61,12 @@
  - 이 세 서비스와 로그들은 시스템 보안에서 큰 역할을 담당한다.
 
 (9) Conclusions&Summaries
- - 지금까지의 요약약
+ - 지금까지의 요약
+
 
 ## 사용 도구 및 명행령어   
  - 리눅스 가상머신 접속
-   1) ssh tryhackme@10.10.1.233 ## tryhackme : 사용자 계정명, 10.10.1.233 : 리눅스 가상머신 주소 -> 그냥 사용자 로그인 생각하면 이걸로 하
+   1) ssh tryhackme@10.10.1.233 ## tryhackme : 사용자 계정명, 10.10.1.233 : 리눅스 가상머신 주소 -> 그냥 사용자 로그인 생각하면 이걸로 하자.
  - nano myfile : 파일 이름이 "myfile"인 파일을 터미널에서 텍스트 작업이 가능하도록 한다. 테그스트 찾기나 복사 같은 메모장에서 할 수 있는 어지간한 일은 전부 할 수 있다.
  - scp filename.type browsername@IpAddress:/filedirectory : 브라우저를 통해 해당 디렉터리에 있는 파일을 다운로드한다.
  - web을 이요한 파일 업로드와 다운로드 과정
@@ -73,23 +76,25 @@
   - ps : 프로세스에 대한 여러 정보들을 출력한다.
   - ps aux : 사용자의 프로세스 뿐만 아니라 다른 사용자의 프로세스의 정보까지도 출력한다.
   - kill 1377 : 프로세스 아이디가 1377인 프로세스를 강제종료시킨다.
+
+
 ## 배운 점
- - 원격 리눅스 머신 접속 방법, 명령어에 붙여 사용하는 플래그들, 리눅스 디렉터리에는 어떤 것들이 있는지 배웠다.
- - 명령어들은 전 모듈에서 배웠고 이번에는 플래그들을 배웠는데 각 명령어마다 사용할 수 있는 플래그들이 달라 배우는데 재미가 있었다.
- - su 명령어를 통한 사용자 계정 전환에 대해 배웠는데 정보보안기사 실기에서 봤던 내용이라 복습을 하는 느낌이 들었다.
+ - 리눅스 터미널 안에서 실행할 수 있는 파일 텍스트 편집기인 nano, VIM에 사용법에 대해서 전반적으로 배웠다. 
+ - wget와 scp 명령어를 배워 리눅스 터미널을 통한 간단한 파일 업로드와 다운로드를 행할 수 있게 되었다.
+ - 이론적으로만 접해봤던 프로세스의 정보를 터미널을 통해 직접적으로 확인할 수 있게 되었다.
+ - Crontab에 대한 기본적인 정보들을 전반적으로 배웠다.
 
 
 ## 실무 적용 가능성
- - 만약 내가 일하는 회사에서 리눅스를 사용한다면 오늘 배운 명령어들이나 플래그들은 전부 쓸 것 같다.
- - 하나의 서버를 두고 여러 사용자가 서버에 대한 작업을 한다면 계정 전환을 할 상황이 생길텐데 그러면 su명령을 쓰지 않을까 생각한다.
- - 각각의 루트 디렉터리들도 로그 파일이나 사용자에 대한 정보를 찾을 때 사용할 것 같다. 
+ - 이번 모듈에서 배운 리눅스 명령어들은 빈번한 빈도로 실무에서 쓸 것 같다.
+ - 만약 회사에서 리눅스를 사용한다면 오늘 배운 것들은 한 번 더 살펴봐야 할 것 같다.
 
 
 ## 느낀 점
- - 리눅스에 대해 본격적으로 배우니 그동안 의문이었던 것들이 조금씩 풀리는 느낌이 들었다.
- - 특히 su 명령과 같은 명령어들은 실습을 하지 않으면 이해하기가 어려워서 기사 실기 준비시 이해가 되지 않았었는데 오늘 일지를 정리하면서 해결의 실마리가 보였다.
- - 리눅스 가상머신을 사용하여 실습을 하니 실무를 하는 느낌이 들어 미래 그리고 취업에 대한 불안감이 약간 줄어들었다. 
+ - 오늘은 리눅스 학습에 대한 마지막 챕터라서 그런지 한 번만 보면 이해가 되지 않는 내용들이 있었다. 그 중 apt key에 대한 내용은 좀 많이 어려웠다.
+ - 이렇게 리눅스 학습을 하니 리눅스마스터 2급 자격증을 한 번 도전해볼까 하는 생각이 들었다. 이 정도 난이도면 할 만할 것 같다.
+ - 이번 모듈의 내용은 다른 모듈보다 방대했는데 많은 정보를 영어로 학습하려니 피로도가 빨리 누적되었다. 그래도 영어 실력이 늘어난다고 생각하니 꾸준히 할 수 있었던 것 같다.
 
-
+   
 ## 실습 화면 기록
-![실습 결과](images/Linux_Fundamentals_Part_2.png)
+![실습 결과](images/Linux_Fundamentals_Part_3.png)
