--- a/pre-security/17.Windows_Fundamentals_2.md
+++ b/pre-security/17.Windows_Fundamentals_2.md
@@ -40,38 +40,61 @@
    3) Software Environment : 운영체제에서 설치하거나 사용자가 설치한 소프트웨어에 관한 정보들을 볼 수 있다.
    
 (6) Resource Monitor
- - Resource Monitor(resmon) : 
+ - Resource Monitor(resmon) : CPU사용량, 램 사용량 등 작업을 수행하는데 필요한 자원 사용량을 보여준다.
+ - 컴퓨터 시스템에 대한 트러블슈팅을 다루고자 하는 사용자들이 주로 사용할 수 있다.
+ - 이 유틸리티는 크게 4가지 메뉴가 있다.
+   1) CPU : 현재 실행 중인 작업별 CPU 사용량을 보여준다.
+   2) Disk : 현재 실행 중인 작업별 Disk 사용량을 보여준다.
+   3) Network : 현재 실행 중인 작업별 Network 사용량을 보여준다.
+   4) Memory : 현제 실행 중인 작업별 Memory 사용량을 보여준다.
 
 (7) Command Prompt
- - 보통 사용자들은 주로 로컬 관리자의 형태로 로그인한다.
- - 관리자의 형태로 로그인되기에 시스템 폴더에 대한 권한이 있어 자칫 사용자가 멀웨어에 감염되면 시스템 전체에 큰 해를 입게된다.
- - 이를 방지하기 위해 마이크로소프트사는 UAc(User Account Control)를 발표하였다. 이 개념은 Vista에서 처음 공개되었다.
+ - Command Prompt(cmd) : 우리가 리눅스에서 했던 터미널과 같이 윈도우의 명령어 실행기이다.
+   1) hostname : 컴퓨터 이름을 출력한다.
+   2) whoami : 현재 로그인한 사용자의 이름을 출력한다.
+   3) ipconfig : 컴퓨터의 네트워크 세팅에 관한 정보를 출력한다.
+   4) /? : 명령어에 쓸 수 있는 옵션들에 대해 알려준다.
+   5) cls : cmd 창을 초기화한다.
+   6) netstat : 프로토콜의 통계적 정보와 현재 연결된 TCP/IP 네트워크를 보여준다.
+   7) net : 주로 네트워크 리소스를 관리하는데 사용한다. 
    
 (8) Registry Editor
- - 윈도우 세팅과 그와 비슷한 컨트롤 패널 활성법
+ - Windows Registry : 중앙 계층적 데이터베이스로, 여러 사용자에 대한 필수적인 시스템 정보(프로파일, 시스템에 잔존하는 하드웨어 등)들을 저장하는데 사용한다.
+ - Window Registry를 보는 방법 중 하나가 Registry Editor(regedit)이다.  
    
 (9) Conclusion
- - 작업 관리자에 대한 간단한 내용이다. 
+ - 이제까지의 요약
 
 
 ## 사용 도구 및 명행령어   
- - 윈도우에 대한 기본적인 내용들만 배워서 사용 도구는 따로 없었다.
+ - cmd 명령어
+   1) hostname : 컴퓨터 이름을 출력한다.
+   2) whoami : 현재 로그인한 사용자의 이름을 출력한다.
+   3) ipconfig : 컴퓨터의 네트워크 세팅에 관한 정보를 출력한다.
+   4) /? : 명령어에 쓸 수 있는 옵션들에 대해 알려준다.
+   5) cls : cmd 창을 초기화한다.
+   6) netstat : 프로토콜의 통계적 정보와 현재 연결된 TCP/IP 네트워크를 보여준다.
+   7) net : 주로 네트워크 리소스를 관리하는데 사용한다. 
+   
 
 
 ## 배운 점
- - 이번에 NTFS에 대해서 배웠는데 로그파일의 정보들을 이용하여 디스크에 있는 폴더, 파일들을 복구해준다는 것을 처음 배웠다.
- - ADS에 대해서 처음 배웠는데 간단히 말하면 이것이 데이터의 유용성을 증가시킨다는 것을 배웠다.
- - User Account Control의 등장배경이 멀웨어로부터 시스템을 지키는 것임을 배웠다.
+ - System Configuration(MSconfig)에 대해서 처음으로 배웠다. 
+ - MSconfig를 통해 여러 유틸리티들을 실행하는 방법을 배웠다.
+ - 여러 유틸리티들 중 중요한 유틸리티(System Information, Resource Monitor, Command Prompt 등)의 읽는 법과 사용법을 배웠다.
+   
 
 
 ## 실무 적용 가능성
- - 윈도우에 대한 기본적인 내용을 이론적으로만 배우는 모듈이기에 실무에서는 크게 유용할 것 같지 않다.
+ - 윈도우 백그라운드에서 실행되는 작업을 여러 툴을 사용해 활용하는 법을 배웠다. 툴들의 목적은 대부분 트러블슈팅이었는데, 만약 내가 운영체제로 윈도우를 사용하고 주업무가 시스템 이상탐지라면 오늘 배운 내용들을 잘 사용할 것 같다.
+ - Command Prompt에 대한 간단한 명령어를 배우고 실습을 진행했는데 이런 간단한 명령어라도 실무에서는 요긴하게 쓰일 것 같다.
 
 
 ## 느낀 점
- - 평소에 쓰던 윈도우를 조금 전문적으로 배우니 새로운 느낌이 들었다.
- - 윈도우 운영체제가 얼마나 잘 짜여진 운영체제인지 새삼 깨달았다.
+ - 학교에서 한 번도 배워보지 않은 것을 배우다보니 알고 있는 것이 늘어난다는 기분 좋은 느낌을 받았다.
+ - 가까운 미래에 내가 오늘 배운 유틸리티들을 사용하면서 일을 한다고 생각하니 열심히 배워야겠다고 생각했다.
+ - 한편으로는 잘 할 수 있을까라는 생각이 든다.
 
    
 ## 실습 화면 기록
-![실습 결과](images/Windows_Fundamentals_Part_1.png)
+![실습 결과](images/Windows_Fundamentals_2.png)
