--- a/pre-security/18.Windows_Fundamentals_3.md
+++ b/pre-security/18.Windows_Fundamentals_3.md
@@ -2,7 +2,7 @@
 
 
 ## 실습 일시
- - 2025-07-02
+ - 2025-07-02~22
 
 
 ## 실습 주제
@@ -10,91 +10,73 @@
  - 이번 모듈에서는 윈도우 운영체제의 보안적 특징들에 대해 전반적으로  살펴볼 것이다.
 
 (2) Windows Updates
- - 윈도우 업데이트는 마이크로소프트사가 업데이트를 통해 사용자에게 높은 보안성과 기능적 향상을 제공하는 서비스이다.
- - 업데이트는 주로 매달 2번째 화요일에 배포된다. 이 날을 Patch Tuesday라 부른다.
- - 만약 긴급한 상황일 경우에는 즉발적으로 윈도우 기기에 업데이트본이 배포된다.
- - 업데이트 방법은 우리가 잘 알다시피 세팅에 들어가서 업데이트 부분에 가면 할 수 있다.
- - 업데이트 시에 생기는 여러 문제들로 인해 윈도우는 업데이트 시 리부팅하는 것을 권장한다.
-  
+ - 윈도우는 보안 상의 이유나 기능 개선, 예기치 못한 문제가 발생했을 때 업데이트를 진행하여 문제를 해결한다.
+ - 윈도우에 급한 업데이트가 있을시 업데이트를 필수로 한다.
+   
 (3) Windows Security
- - System Configuration에서 User Account Control(UAC) 세팅을 바꾸거나 아예 끌 수 있다.
+ - 사용자의 기기나 데이터를 관리할 수 있는 도구들이 모여있다.
+ - 보안 부분에서 색에 따라 의미하는 것이 다르다.
+   1) 초록색은 사용자의 기기가 충분히 보호되고 있다는 것을 의미한다.
+   2) 노란색은 검토해야할 필요가 있다고 검사를 권고하는 색이다.
+   3) 빨간색은 경고의 의미로 즉각적인 조치가 필요하다는 것을 의미한다.
 
 (4) Virus&threat protection
- - Computer Management(compmgmt) : 크게 3가지 섹션이 있다.
-   1) System Tools : 크게 5가지 툴이 있다.
-      a) Task Scheduler : 특정한 시간에 컴퓨터가 작업을 수행하도록 일정을 만들거나 관리할 수 있다.
-      b) Event Viewer : 컴퓨터에서 일어나는 이벤트를 볼 수 있게 해준다. 주로 문제가 발생했는지 유무를 판별하는데 사용한다.
-      c) Shared Folders : 타인과 연결된 공유나 공유 폴더를 볼 때 사용한다.
-      d) Local Users and Groups : 유저와 그룹 사용자를 보여준다.
-      e) Performance : Preforamnce Monitor(perform)을 통해 로그파일을 살펴봄으로써 이상이 발생했을 때 트러블슈팅에 많은 도움을 준다.
-   2) Storage : Storage에는 Windows Server backup과 Disk Management가 있는 데 그 중 후자를 살펴보겠다.
-      a) Disk Management : 윈도우가 하는 스토리지 작업을 개선할 수 있게 하는 시스템 유틸리티이다.
-   3) Services and Applications : 백그라운드에서 실행되는 서비스들의 상태를 확인하고 활성화할지 안 할지를 결정할 수 있다.  
+ - 윈도우에는 3가지 스캔 옵션이 있다.
+   1) Quick scan : 통상적으로 위협이 발견되었던 폴더들만 체크한다. 
+   2) Full scan : 하드디스크에서 실행되고 있는 모든 파일과 프로그램들을 검사한다.
+   3) Custom scan : 검사하고 싶은 폴더들만 골라 검사한다.
 
 (5) Firewall&network protection
- - System Information(msinfo32) : 컴퓨터 이상 확인시 사용할 수 있는 하드웨어, 시스템 구성, 소프트웨어 환경 정보 등을 모으는 도구이다.
-   1) Hardware Resources : 보통의 사용자들은 알 필요가 없다.
-   2) Components : 컴퓨터에 설치된 하드웨어 정보들을 볼 수 있다.
-   3) Software Environment : 운영체제에서 설치하거나 사용자가 설치한 소프트웨어에 관한 정보들을 볼 수 있다.
+ - 방화벽 : 방화벽이란 포트를 통해 데이터가 들어오는데 들어오는 데이터에 조건을 걸어 사용자가 허용하는 데이터만 교환될 수 있도록 하는 일종의 경비원이다.
+ - 방화벽에는 3종류의 프로파일이 있다.
+   1) Domain : 호스트 시스템이 도메인 컨트롤러에게 권한을 줄 수 있게끔 하는 프로파일이다.
+   2) Private : 사용자가 지정한 프로파일로 프라이빗, 홈 네트워크를 디자인할 수 있게 한다.
+   4) Public : 디폴트 설정인 프로파일로 와이파이 핫스팟이나 커피숍 같은 공공장소에서 사용한다.
    
 (6) App&browser control
- - Resource Monitor(resmon) : CPU사용량, 램 사용량 등 작업을 수행하는데 필요한 자원 사용량을 보여준다.
- - 컴퓨터 시스템에 대한 트러블슈팅을 다루고자 하는 사용자들이 주로 사용할 수 있다.
- - 이 유틸리티는 크게 4가지 메뉴가 있다.
-   1) CPU : 현재 실행 중인 작업별 CPU 사용량을 보여준다.
-   2) Disk : 현재 실행 중인 작업별 Disk 사용량을 보여준다.
-   3) Network : 현재 실행 중인 작업별 Network 사용량을 보여준다.
-   4) Memory : 현제 실행 중인 작업별 Memory 사용량을 보여준다.
+ - Microsoft Defender SmartScreen : 피싱이나 멀웨어로부터 사용자 기기를 보호한다.
+ - Microsoft Defender SmartScreen는 웹에서 받은 인식되지 않은 파일이나 앱을 검사함으로써 기기 보호를 돕는다.  
 
 (7) Device security
- - Command Prompt(cmd) : 우리가 리눅스에서 했던 터미널과 같이 윈도우의 명령어 실행기이다.
-   1) hostname : 컴퓨터 이름을 출력한다.
-   2) whoami : 현재 로그인한 사용자의 이름을 출력한다.
-   3) ipconfig : 컴퓨터의 네트워크 세팅에 관한 정보를 출력한다.
-   4) /? : 명령어에 쓸 수 있는 옵션들에 대해 알려준다.
-   5) cls : cmd 창을 초기화한다.
-   6) netstat : 프로토콜의 통계적 정보와 현재 연결된 TCP/IP 네트워크를 보여준다.
-   7) net : 주로 네트워크 리소스를 관리하는데 사용한다. 
+ - 메모리 무결성은 높은 차원에서의 악의적 코드 삽입 공격을 예방한다.
+ - TPM(Trusted Platform Module) : 하드웨어 베이스의 안전 기술로 TPM칩은 암호적 업무들을 수행할 수 있다.
+ - 이 칩은 물리적으로 다중 보안 메커니즘을 가지기에 악의적 소프트웨어로부터 높은 보안성을 지닌다. 
    
 (8) BitLocker
- - Windows Registry : 중앙 계층적 데이터베이스로, 여러 사용자에 대한 필수적인 시스템 정보(프로파일, 시스템에 잔존하는 하드웨어 등)들을 저장하는데 사용한다.
- - Window Registry를 보는 방법 중 하나가 Registry Editor(regedit)이다.  
+ - BitLocker : 운영체제와 위협에 노출된 데이터의 주소를 합친 것을 특징으로 하는 데이터 보안이다.
+ - 사용자 기기에 TPM이 설치되었다면 비트로커는 최고의 보안을 제공한다.
    
 (9) Volume Shadow Copy Service
- - 
-
+ - Volume Shadow Copy Service(VSS) : 앞으로 백업될 데이터의 스냅샷을 만드는데 필요하다.
+ - System Volume Information 폴더에 저장된다.
+   
 (10) Conclusion
+ - 이제까지의 요약
 
 
 ## 사용 도구 및 명행령어   
- - cmd 명령어
-   1) hostname : 컴퓨터 이름을 출력한다.
-   2) whoami : 현재 로그인한 사용자의 이름을 출력한다.
-   3) ipconfig : 컴퓨터의 네트워크 세팅에 관한 정보를 출력한다.
-   4) /? : 명령어에 쓸 수 있는 옵션들에 대해 알려준다.
-   5) cls : cmd 창을 초기화한다.
-   6) netstat : 프로토콜의 통계적 정보와 현재 연결된 TCP/IP 네트워크를 보여준다.
-   7) net : 주로 네트워크 리소스를 관리하는데 사용한다. 
+ - 윈도우의 기본적인 부분을 배우는 것이기에 이번 장에서는 명령어를 사용하지 않았다. 
    
 
 
 ## 배운 점
- - System Configuration(MSconfig)에 대해서 처음으로 배웠다. 
- - MSconfig를 통해 여러 유틸리티들을 실행하는 방법을 배웠다.
- - 여러 유틸리티들 중 중요한 유틸리티(System Information, Resource Monitor, Command Prompt 등)의 읽는 법과 사용법을 배웠다.
-   
+ - 윈도우 스캔 옵션이 3가지나 있다는 것을 배웠고 그 중 Quick scan에서 검사할 폴더의 선정 기준이 이제까지 위협이 자주 발생했는가 인지는 처음 배웠다.
+ - 방화벽에서 3가지의 프로파일에 대해 처음 배웠다.
+ - VSS나 스마트 스크린 같이 생소한 윈도우 기능들에 대해 간단히 배웠다.
 
 
 ## 실무 적용 가능성
- - 윈도우 백그라운드에서 실행되는 작업을 여러 툴을 사용해 활용하는 법을 배웠다. 툴들의 목적은 대부분 트러블슈팅이었는데, 만약 내가 운영체제로 윈도우를 사용하고 주업무가 시스템 이상탐지라면 오늘 배운 내용들을 잘 사용할 것 같다.
- - Command Prompt에 대한 간단한 명령어를 배우고 실습을 진행했는데 이런 간단한 명령어라도 실무에서는 요긴하게 쓰일 것 같다.
+ - 오늘은 윈도우 설정 중에서 업데이트와 보안 부분에 대해 간략하게 배웠다.
+ - 내가 오늘 배운 것을 실무에서 쓸까 생각하면 오늘 배운 내용들이 너무 얕아 쓰지는 않을 것 같다.
+ - 그래도 업데이트로 한정 지으면 전문적 업무가 아닌 간단한 사무 업무에서 사용할 것 같기는 하다.
 
 
 ## 느낀 점
- - 학교에서 한 번도 배워보지 않은 것을 배우다보니 알고 있는 것이 늘어난다는 기분 좋은 느낌을 받았다.
- - 가까운 미래에 내가 오늘 배운 유틸리티들을 사용하면서 일을 한다고 생각하니 열심히 배워야겠다고 생각했다.
- - 한편으로는 잘 할 수 있을까라는 생각이 든다.
+ - 3주 만에 하는 실습이다. 그동안 너무 해이해져 있었다. 너무 혼자서만 오래 공부한 탓일까 아무것도 하기가 싫었다.
+ - 내가 과연 이 길을 가는 것이 맞을까, 자격증 시험에 합격할 수 있을까, 취업을 할 수 있을까, 시간을 버리고 있는 것이 아닌가 등 여러 생각이 들었다.
+ - 이 장을 마지막으로 기본 장이 종료가 되었는데 이것을 내가 다 끝냈다는 생각에 조금의 성취감을 느꼈다.
 
    
 ## 실습 화면 기록
-![실습 결과](images/Windows_Fundamentals_2.png)
+![실습 결과](images/Windows_Fundamentals_3.png)
+![실습 결과](images/Complete_Certificate.png)
