--- a/Cyber_Security_101/1.Search_Skills.md
+++ b/Cyber_Security_101/1.Search_Skills.md
@@ -1,1 +1,86 @@
+## TryHackMe: Search Skills
 
+
+## 실습 일시
+ - 2025-07-24
+
+
+## 실습 주제
+(1) Introduction
+ - 구글 서치 결과 '해킹 배우기' 보다 '정보보안 배우기'가 2배 이상 검색되었다. 그만큼 관심이 많아졌다.
+ - 이번 모듈에서의 목표는 다음과 같다.
+   1) Evaluate information sources
+   2) Use search engines efficiently
+   3) Explore specialized search engines
+   4) Read technical documentation
+   5) Make use of social media
+   6) Check news outlets
+
+(2) Evaluation of Search Results
+ - 인터넷에서는 누구나 자신이 쓴 글을 블로그나 위키, 기사의 형태로 올릴 수 있다.
+ - 우리는 다양한 형태로 게재되어있는 정보들을 평가하고 걸러낼 줄 알아야 한다. 정보들을 걸러낼 시에 몇가지 고려하여야 하는 사항들이 있다.
+   1) Source : 글을 게시한 조직이나 저자를 확인하라. 정보를 게시한 사람이 그 분야세어 명성이 있거나 권위가 있는지 생각하라
+   2) Evidence and reasoning : 주장에 신뢰할 만한 증거가 있거나 논리적인 추론이 있는지 검사하라. 우리가 찾고 있는 건 변하지 않는 진실이다. 
+   3) Objectivity and bias : 정보가 중립적으로 이성적으로 다수의 의견을 반영하는지 평가하라. 우리는 저자가 지지하는 어젠다나 경쟁 상대를 공격하는 것에 관심이 없다.
+   4) Corroboration and consistency : 게재되어 잇는 정보가 여러 개의 독립적인 자료들로 뒷받침 되는지 검증하라. 주된 주장이 여러 곳의 신뢰할 수 있고 명성이 있는 곳에서도 동의하는지 체크하라.
+   
+(3) Search Engines
+ - 사용자의 기기나 데이터를 관리할 수 있는 도구들이 모여있다.
+ - 보안 부분에서 색에 따라 의미하는 것이 다르다.
+   1) 초록색은 사용자의 기기가 충분히 보호되고 있다는 것을 의미한다.
+   2) 노란색은 검토해야할 필요가 있다고 검사를 권고하는 색이다.
+   3) 빨간색은 경고의 의미로 즉각적인 조치가 필요하다는 것을 의미한다.
+
+(4) Specialized Search Engines
+ - 윈도우에는 3가지 스캔 옵션이 있다.
+   1) Quick scan : 통상적으로 위협이 발견되었던 폴더들만 체크한다. 
+   2) Full scan : 하드디스크에서 실행되고 있는 모든 파일과 프로그램들을 검사한다.
+   3) Custom scan : 검사하고 싶은 폴더들만 골라 검사한다.
+
+(5) Vulnerabilities and Exploits
+ - 방화벽 : 방화벽이란 포트를 통해 데이터가 들어오는데 들어오는 데이터에 조건을 걸어 사용자가 허용하는 데이터만 교환될 수 있도록 하는 일종의 경비원이다.
+ - 방화벽에는 3종류의 프로파일이 있다.
+   1) Domain : 호스트 시스템이 도메인 컨트롤러에게 권한을 줄 수 있게끔 하는 프로파일이다.
+   2) Private : 사용자가 지정한 프로파일로 프라이빗, 홈 네트워크를 디자인할 수 있게 한다.
+   4) Public : 디폴트 설정인 프로파일로 와이파이 핫스팟이나 커피숍 같은 공공장소에서 사용한다.
+   
+(6) Technical Documentation
+ - Microsoft Defender SmartScreen : 피싱이나 멀웨어로부터 사용자 기기를 보호한다.
+ - Microsoft Defender SmartScreen는 웹에서 받은 인식되지 않은 파일이나 앱을 검사함으로써 기기 보호를 돕는다.  
+
+(7) Social Media
+ - 메모리 무결성은 높은 차원에서의 악의적 코드 삽입 공격을 예방한다.
+ - TPM(Trusted Platform Module) : 하드웨어 베이스의 안전 기술로 TPM칩은 암호적 업무들을 수행할 수 있다.
+ - 이 칩은 물리적으로 다중 보안 메커니즘을 가지기에 악의적 소프트웨어로부터 높은 보안성을 지닌다. 
+   
+(8) Conclusion
+ - BitLocker : 운영체제와 위협에 노출된 데이터의 주소를 합친 것을 특징으로 하는 데이터 보안이다.
+ - 사용자 기기에 TPM이 설치되었다면 비트로커는 최고의 보안을 제공한다.
+   
+
+## 사용 도구 및 명행령어   
+ - 윈도우의 기본적인 부분을 배우는 것이기에 이번 장에서는 명령어를 사용하지 않았다. 
+   
+
+
+## 배운 점
+ - 윈도우 스캔 옵션이 3가지나 있다는 것을 배웠고 그 중 Quick scan에서 검사할 폴더의 선정 기준이 이제까지 위협이 자주 발생했는가 인지는 처음 배웠다.
+ - 방화벽에서 3가지의 프로파일에 대해 처음 배웠다.
+ - VSS나 스마트 스크린 같이 생소한 윈도우 기능들에 대해 간단히 배웠다.
+
+
+## 실무 적용 가능성
+ - 오늘은 윈도우 설정 중에서 업데이트와 보안 부분에 대해 간략하게 배웠다.
+ - 내가 오늘 배운 것을 실무에서 쓸까 생각하면 오늘 배운 내용들이 너무 얕아 쓰지는 않을 것 같다.
+ - 그래도 업데이트로 한정 지으면 전문적 업무가 아닌 간단한 사무 업무에서 사용할 것 같기는 하다.
+
+
+## 느낀 점
+ - 3주 만에 하는 실습이다. 그동안 너무 해이해져 있었다. 너무 혼자서만 오래 공부한 탓일까 아무것도 하기가 싫었다.
+ - 내가 과연 이 길을 가는 것이 맞을까, 자격증 시험에 합격할 수 있을까, 취업을 할 수 있을까, 시간을 버리고 있는 것이 아닌가 등 여러 생각이 들었다.
+ - 이 장을 마지막으로 기본 장이 종료가 되었는데 이것을 내가 다 끝냈다는 생각에 조금의 성취감을 느꼈다.
+
+   
+## 실습 화면 기록
+![실습 결과](images/Windows_Fundamentals_3.png)
+![실습 결과](images/Complete_Certificate.png)
