--- a/Cyber_Security_101/1.Search_Skills.md
+++ b/Cyber_Security_101/1.Search_Skills.md
@@ -22,27 +22,26 @@
    1) Source : 글을 게시한 조직이나 저자를 확인하라. 정보를 게시한 사람이 그 분야세어 명성이 있거나 권위가 있는지 생각하라
    2) Evidence and reasoning : 주장에 신뢰할 만한 증거가 있거나 논리적인 추론이 있는지 검사하라. 우리가 찾고 있는 건 변하지 않는 진실이다. 
    3) Objectivity and bias : 정보가 중립적으로 이성적으로 다수의 의견을 반영하는지 평가하라. 우리는 저자가 지지하는 어젠다나 경쟁 상대를 공격하는 것에 관심이 없다.
-   4) Corroboration and consistency : 게재되어 잇는 정보가 여러 개의 독립적인 자료들로 뒷받침 되는지 검증하라. 주된 주장이 여러 곳의 신뢰할 수 있고 명성이 있는 곳에서도 동의하는지 체크하라.
+   4) Corroboration and consistency : 게재되어 있는 정보가 여러 개의 독립적인 자료들로 뒷받침 되는지 검증하라. 주된 주장이 여러 곳의 신뢰할 수 있고 명성이 있는 곳에서도 동의하는지 체크하라.
+ - Snake oil : 위법이나 사기로 생각될 수 있는 기법이나 상품들의 총칭
    
 (3) Search Engines
- - 사용자의 기기나 데이터를 관리할 수 있는 도구들이 모여있다.
- - 보안 부분에서 색에 따라 의미하는 것이 다르다.
-   1) 초록색은 사용자의 기기가 충분히 보호되고 있다는 것을 의미한다.
-   2) 노란색은 검토해야할 필요가 있다고 검사를 권고하는 색이다.
-   3) 빨간색은 경고의 의미로 즉각적인 조치가 필요하다는 것을 의미한다.
+ - 많은 사람들이 검색 엔진을 사용하고 있지만 모든 능력을 이끌어내지는 않는다.
+ - 'site:example.com' : 검색어를 입력할 때 이 명령어를 쓰면 예로 든 사이트 내에서 검색되어진다.(site:facebook.com 장갑차 -> 페이스북 사이트 내에 있는 장갑차 정보만 출력한다.)
+ - '-' : 여집합 개념이다. 검색할 시 이 명령어를 쓰면 해당 키워드를 가진 정보는 출력되지 않는다.(이집트 - 피라미드 -> 피라미드를 제외한 이집트에 대한 내용이 출력된다.)
+ - 'filetype:' : 조건으로 세운 파일 확장자만을 출력한다.(filetype:pdf 재무제표 -> 재무제표에 대한 내용 중 pdf 파일만을 출력한다.) 
 
 (4) Specialized Search Engines
- - 윈도우에는 3가지 스캔 옵션이 있다.
-   1) Quick scan : 통상적으로 위협이 발견되었던 폴더들만 체크한다. 
-   2) Full scan : 하드디스크에서 실행되고 있는 모든 파일과 프로그램들을 검사한다.
-   3) Custom scan : 검사하고 싶은 폴더들만 골라 검사한다.
-
+ - 세상에는 보편적으로 쓰이는 검색 엔진이외에도 특별한 검색엔진있다. 이러한 검색엔진은 사용자에게 특별한 결과를 제공한다.
+ - Shodan : 인터넷에 연결된 기기들의 정보를 담고 있는 검색엔진으로 서버, 네트워크 장비, 산업 제어 시스템, 사물 인터넷 정보들을 얻을 수 있다.
+ - Censys : 쇼단과 비슷하지만 쇼단은 인터넷에 연결되어 잇는 기기나 시스템을 중점을 두었고 반면에 켄시스는 인터넷에 연결되어 잇는 호스트, 웹사이트 등의 에셋에 중점을 두었다.
+ - VirusTotal : 여러 개의 안티바이러스 엔진을 통해 바이러스 스캐닝 서비스를 공급하는 웹사이트이다. 사용자는 검사하고자 하는 파일이나 url을 올려 검사를 진행한다. 내부 커뮤니티가 있어 바이러스에 대한 자세함 설명이나 해석들을 공유할 수 있다.
+ - Have I Been Pwned : 이메일 주소를 통해 이메일에서 사용자의 민감한 정보가 유출됐는지 안 됐는지 알아낸다. 대부분으니 사용자들은 똑같은 비밀번호를 여러 개의 사이트에서 사용하기에 이 부분에 대해 주의가 필요하다.
+   
 (5) Vulnerabilities and Exploits
- - 방화벽 : 방화벽이란 포트를 통해 데이터가 들어오는데 들어오는 데이터에 조건을 걸어 사용자가 허용하는 데이터만 교환될 수 있도록 하는 일종의 경비원이다.
- - 방화벽에는 3종류의 프로파일이 있다.
-   1) Domain : 호스트 시스템이 도메인 컨트롤러에게 권한을 줄 수 있게끔 하는 프로파일이다.
-   2) Private : 사용자가 지정한 프로파일로 프라이빗, 홈 네트워크를 디자인할 수 있게 한다.
-   4) Public : 디폴트 설정인 프로파일로 와이파이 핫스팟이나 커피숍 같은 공공장소에서 사용한다.
+ - CVE(Common Vulenabilities and Exposures) : 간단하게 말하자면 취약점들의 사전이다. 하드웨어나 소프트웨어에서 발생하는 다양한 취약점과 보안 이슈들의 표준화된 식별자를 제공한다.
+ - 각 취약점들은 CVE ID라는 식별자를 가지는데 이 식별자는 사용자들이 해당 취약점을 겪었던 사례들을 들여다볼 수 있게 한다.
+ - MITRE Corporation이 해당 시스템을 유지하고 있다.
    
 (6) Technical Documentation
  - Microsoft Defender SmartScreen : 피싱이나 멀웨어로부터 사용자 기기를 보호한다.
