--- a/Cyber_Security_101/1.Search_Skills.md
+++ b/Cyber_Security_101/1.Search_Skills.md
@@ -2,7 +2,7 @@
 
 
 ## 실습 일시
- - 2025-07-24
+ - 2025-07-24~28
 
 
 ## 실습 주제
@@ -42,44 +42,48 @@
  - CVE(Common Vulenabilities and Exposures) : 간단하게 말하자면 취약점들의 사전이다. 하드웨어나 소프트웨어에서 발생하는 다양한 취약점과 보안 이슈들의 표준화된 식별자를 제공한다.
  - 각 취약점들은 CVE ID라는 식별자를 가지는데 이 식별자는 사용자들이 해당 취약점을 겪었던 사례들을 들여다볼 수 있게 한다.
  - MITRE Corporation이 해당 시스템을 유지하고 있다.
+ - Exploit Database : 앱의 취약점을 악용하는 데는 많은 이유가 있다. 당연한 말이지만 우리는 허가 없이 취약점을 악용하지 말아야 한다.
+ - 만약 우리한테 그러한 허가가 떨어진다면 우리는 악용될 수 있는 코드를 찾아야한다. 그 방법 중 하나가 Exploit Database이다.
+ - 이 사이트에서 사용자는 검증된 악용할 수 있는 코드들의 목록을 볼 수 있다.
    
 (6) Technical Documentation
- - Microsoft Defender SmartScreen : 피싱이나 멀웨어로부터 사용자 기기를 보호한다.
- - Microsoft Defender SmartScreen는 웹에서 받은 인식되지 않은 파일이나 앱을 검사함으로써 기기 보호를 돕는다.  
-
+ - 리눅스 시스템에서 공식 문서를 볼 수 있는 중요한 기술이 있다.
+   1) Linux Manual Pages : 인터넷으로 정보를 교환하기 전에 이용하던 방법이다.
+   2) Microsoft Windows : 윈도우는 예전부터 기술 문서들을 온라인으로 제공한다.
+   3) Product Documentation : 잘 만들어진 상품들은 잘 만들어진 문서 또한 가지고 있다.
+ - 이러한 기술 문서들은 중요한 업데이트 후에 한 번 읽을 필요가 있다. 
 (7) Social Media
- - 메모리 무결성은 높은 차원에서의 악의적 코드 삽입 공격을 예방한다.
- - TPM(Trusted Platform Module) : 하드웨어 베이스의 안전 기술로 TPM칩은 암호적 업무들을 수행할 수 있다.
- - 이 칩은 물리적으로 다중 보안 메커니즘을 가지기에 악의적 소프트웨어로부터 높은 보안성을 지닌다. 
+ - 현재 많은 플랫폼에서 다양한 소셜 네트워크 서비스를 운영하고 있다.
+ - 그중 페이스북이나 x같이 유명한 것도 있지만 유명하지 않은 것도 존재한다.
+ - 그런 사이트에 접속할 때는 보안적으로 임시 이메일을 생성하고 사용하는 것으로 인터넷 보안을 높여야 한다.
+ - 정보 보안 분야에서 밥 먹고 살아가려면 우리는 항상 최신 트렌드를 알아야 하고 끊임 없이 배워야 한다.
+ - 그리고 비밀번호를 알기 위해 설정한 질문들의 답이 자신만이 아는 것으로 바꿔야 한다. 
    
 (8) Conclusion
- - BitLocker : 운영체제와 위협에 노출된 데이터의 주소를 합친 것을 특징으로 하는 데이터 보안이다.
- - 사용자 기기에 TPM이 설치되었다면 비트로커는 최고의 보안을 제공한다.
+ - 정보 보안 전문가각 되기 위해서는 많은 것을 알아야 한다.
+ - 하지만 모든 것을 알 수는 없기에 우리는 항상 귀를 열고 최신 정보에 민감해야 하며 그러한 정보를 알려주는 소스들을 가까이 두어야 한다.
    
 
 ## 사용 도구 및 명행령어   
- - 윈도우의 기본적인 부분을 배우는 것이기에 이번 장에서는 명령어를 사용하지 않았다. 
+ - 명령어를 사용하지 않았다. 
    
 
 
 ## 배운 점
- - 윈도우 스캔 옵션이 3가지나 있다는 것을 배웠고 그 중 Quick scan에서 검사할 폴더의 선정 기준이 이제까지 위협이 자주 발생했는가 인지는 처음 배웠다.
- - 방화벽에서 3가지의 프로파일에 대해 처음 배웠다.
- - VSS나 스마트 스크린 같이 생소한 윈도우 기능들에 대해 간단히 배웠다.
+ - 'filetype:', 'site:' 등 특정 파일 타입만을 보이게 하거나 사이트를 국한해서 검색하는 등 검색엔진의 다양한 활용법에 대해 배웠다.
+ - 쇼단과 Censys등 평소에 접해보지 않았던 사이트를 접해보고 경험해보았다.
+ - 우리가 흔히 사용하는 소셜 미디어의 최신 정보를 빨리 알 수 있고 트렌드를 파악할 수 있다는 순기능도 배웠다.
 
 
 ## 실무 적용 가능성
- - 오늘은 윈도우 설정 중에서 업데이트와 보안 부분에 대해 간략하게 배웠다.
- - 내가 오늘 배운 것을 실무에서 쓸까 생각하면 오늘 배운 내용들이 너무 얕아 쓰지는 않을 것 같다.
- - 그래도 업데이트로 한정 지으면 전문적 업무가 아닌 간단한 사무 업무에서 사용할 것 같기는 하다.
+ - 오늘 검색 엔진 부분에서 배웠던 여러 가지 조건들을 걸고 찾는 방식은 실무에서 자표를 찾을 때 요긴하게 써먹을 수 있을 것 같다.
+ - Shodan, Censys, Virustotal 같은 사이트들은 실무에서 파일이나 폴더에 바이러스가 있을 때 확인하거나 취약점이 발생되었을 때 어떤 취약점인지 찾기 위해서 사용할 것 같다.
 
 
 ## 느낀 점
- - 3주 만에 하는 실습이다. 그동안 너무 해이해져 있었다. 너무 혼자서만 오래 공부한 탓일까 아무것도 하기가 싫었다.
- - 내가 과연 이 길을 가는 것이 맞을까, 자격증 시험에 합격할 수 있을까, 취업을 할 수 있을까, 시간을 버리고 있는 것이 아닌가 등 여러 생각이 들었다.
- - 이 장을 마지막으로 기본 장이 종료가 되었는데 이것을 내가 다 끝냈다는 생각에 조금의 성취감을 느꼈다.
-
+ - 이번에 배운 내용들은 새로운 카테고리에 있는 내용들이라 그런지 신선했고 배운다는 느낌이 났다.
+ - 우리가 당연하게 생각해왔던 정보들의 출처를 확인하라 신뢰할 만한지를 확인하라 를 다시 읽으면서 배우니 정말 중요하다는 것을 느꼈다.
+ - 정보보안기사 준비 시 '쇼단'에 대한 내용이 나오는데 그래서 그런지 친근하게 느껴졌다.
    
 ## 실습 화면 기록
-![실습 결과](images/Windows_Fundamentals_3.png)
-![실습 결과](images/Complete_Certificate.png)
+![실습 결과](images/Search_Skills.png)
