--- a/Cyber_Security_101/2.Active_Directory_Basics.md
+++ b/Cyber_Security_101/2.Active_Directory_Basics.md
@@ -11,16 +11,14 @@
  - 액티브 디렉터리는 기업 환경에 연결되어 있는 기기들이나 사용자들의 관리를 간단하게 해준다.
  - 이번 모듈에서의 목표는 다음과 같다.
   1) 액티브 디렉터리란 뭔지
+  2) 액티브 디렉터리 도메인이란 뭔지
+  3) 액티브 디렉터리의 구성요소는 무엇인지
+  4) Forests and Domain Trust
+  5) And much more
   
 (2) Windows Domains
- - 인터넷에서는 누구나 자신이 쓴 글을 블로그나 위키, 기사의 형태로 올릴 수 있다.
- - 우리는 다양한 형태로 게재되어있는 정보들을 평가하고 걸러낼 줄 알아야 한다. 정보들을 걸러낼 시에 몇가지 고려하여야 하는 사항들이 있다.
-   1) Source : 글을 게시한 조직이나 저자를 확인하라. 정보를 게시한 사람이 그 분야세어 명성이 있거나 권위가 있는지 생각하라
-   2) Evidence and reasoning : 주장에 신뢰할 만한 증거가 있거나 논리적인 추론이 있는지 검사하라. 우리가 찾고 있는 건 변하지 않는 진실이다. 
-   3) Objectivity and bias : 정보가 중립적으로 이성적으로 다수의 의견을 반영하는지 평가하라. 우리는 저자가 지지하는 어젠다나 경쟁 상대를 공격하는 것에 관심이 없다.
-   4) Corroboration and consistency : 게재되어 있는 정보가 여러 개의 독립적인 자료들로 뒷받침 되는지 검증하라. 주된 주장이 여러 곳의 신뢰할 수 있고 명성이 있는 곳에서도 동의하는지 체크하라.
- - Snake oil : 위법이나 사기로 생각될 수 있는 기법이나 상품들의 총칭
-   
+ - 우리가 네트워크 사업을 하고 있다고 생각해보자. 네트워크의 구성원이 다섯 명뿐이라면 네트워크에 문제가 생길 시 우리는 바로바로 그 문제점을 고칠 수 있다.
+ - 하지만 네트워크의 구성원이 많으면 많아질수록 등록되어 있는 기기가 많으면 많아질수록 그러한 관리가 어려워질 것이란 건 예상하기 쉽다.   
 (3) Active Directory
  - 많은 사람들이 검색 엔진을 사용하고 있지만 모든 능력을 이끌어내지는 않는다.
  - 'site:example.com' : 검색어를 입력할 때 이 명령어를 쓰면 예로 든 사이트 내에서 검색되어진다.(site:facebook.com 장갑차 -> 페이스북 사이트 내에 있는 장갑차 정보만 출력한다.)
