--- a/Cyber_Security_101/2.Active_Directory_Basics.md
+++ b/Cyber_Security_101/2.Active_Directory_Basics.md
@@ -10,20 +10,31 @@
  - 마이크로소프트 사의 액티브 디렉토리는 기업 세계에서 척추와 같은 역할을 한다.
  - 액티브 디렉터리는 기업 환경에 연결되어 있는 기기들이나 사용자들의 관리를 간단하게 해준다.
  - 이번 모듈에서의 목표는 다음과 같다.
-  1) 액티브 디렉터리란 뭔지
-  2) 액티브 디렉터리 도메인이란 뭔지
-  3) 액티브 디렉터리의 구성요소는 무엇인지
-  4) Forests and Domain Trust
-  5) And much more
+   1) 액티브 디렉터리란 뭔지
+   2) 액티브 디렉터리 도메인이란 뭔지
+   3) 액티브 디렉터리의 구성요소는 무엇인지
+   4) Forests and Domain Trust
+   5) And much more
   
 (2) Windows Domains
  - 우리가 네트워크 사업을 하고 있다고 생각해보자. 네트워크의 구성원이 다섯 명뿐이라면 네트워크에 문제가 생길 시 우리는 바로바로 그 문제점을 고칠 수 있다.
- - 하지만 네트워크의 구성원이 많으면 많아질수록 등록되어 있는 기기가 많으면 많아질수록 그러한 관리가 어려워질 것이란 건 예상하기 쉽다.   
+ - 하지만 네트워크의 구성원이 많으면 많아질수록 등록되어 있는 기기가 많으면 많아질수록 그러한 관리가 어려워질 것이란 건 예상하기 쉽다.
+ - 이러한 한께를 극복하기 위해 우리는 윈도우 도메인을 사용할 수 있다.
+ - 윈도우 도메인이란 그룹에 속해 있는 여러 사용자와 컴퓨터들을 묶어서 관리할 수 있게 하는 도구로 이러한 도메인은 액티브 디렉터리(AD:Active Directory)라는 하나의 저장소를 가진다.
+ - 액티브 디렉터리를 실행하고 관리하는 서비스를 Domain Controller(DC)라고 부른다.
+ - 윈도우 도메인을 가질 때의 주된 장점은 다음과 같다.
+   1) 중앙집중적인 개체 관리 : 네트워크의 구성원들은 적은 노력으로 기기를 관리할 수 있다.
+   2) 보안 정책 관리 : 사용자는 액티브 디렉터리를 통해서 보안 정책을 직접적으로 구성할 수 있고 네트워크를 통해 곧바로 적용시킬 수 있다.
+ - 액티브 디렉터리는 실생활에서 자주 쓰이는데 대표적인 것 중 하나가 학생증을 통한 학교 출입 시스템이다.
+
 (3) Active Directory
- - 많은 사람들이 검색 엔진을 사용하고 있지만 모든 능력을 이끌어내지는 않는다.
- - 'site:example.com' : 검색어를 입력할 때 이 명령어를 쓰면 예로 든 사이트 내에서 검색되어진다.(site:facebook.com 장갑차 -> 페이스북 사이트 내에 있는 장갑차 정보만 출력한다.)
- - '-' : 여집합 개념이다. 검색할 시 이 명령어를 쓰면 해당 키워드를 가진 정보는 출력되지 않는다.(이집트 - 피라미드 -> 피라미드를 제외한 이집트에 대한 내용이 출력된다.)
- - 'filetype:' : 조건으로 세운 파일 확장자만을 출력한다.(filetype:pdf 재무제표 -> 재무제표에 대한 내용 중 pdf 파일만을 출력한다.) 
+ - 윈도우 도메인의 핵심은 Active Directory Domain Service(AD DS)이다.
+ - 이 서비스는 네트워크 내에 존재하는 모든 개체들의 정보를 카탈로그화 해준다.
+ - Users : 사용자는 액티브 디렉터리에 존재하는 가장 흔한 개체 중 하나이다. 사용자는 보안 원칙으로 알려진 개체 중의 하나로, 그 이유는 사용자는 도메인으로부터 권한을 받거나 파일이나 프린터들 같은 자원들을 사용할 권리를 갖기 때문이다. 사용자는 크게 다음과 같은 엔티티로 나타내어진다.
+   1) People : 사용자는 직원과 같이 조직에서 네트워크에 접속이 필요한 개인으로 대표된다.
+   2) Services : 유저를 IIS나 MSSQL 같은 서비스를 사용하는 사용자로 정의할 수 있다. 이러한 식으로 정의된 사용자는 보통 사용자와는 다르며, 이들은 오직 서비스를 실행시키는 권한만을 갖는다.
+ - Machines : 모든 컴퓨터가 액티브 디렉터리 도메인에 접속할 때, 머신 오브젝트는 생성된다. 머신 또한 보안 원칙 오브젝트로 취급되며 보통 사용자 계정과 같은 권한을 같지만 몇몇에 대해서는 제한된 권리를 가진다. 머신 계정은 로컬 관리자 계정이기에 패스워드를 알고 있지 않은 한 이 컴퓨터 이외로는 접속할 수 없다. 머신 계정의 패스워드는 자동적으로 갱신되는 120글자의 난수로 이뤄져 있다. 이러한 머신 계정을 알아내는 것은 비교적 쉬운데 이러한 계정은 특별한 작명법을 가진다. 머신 계정은 항상 컴퓨터 이름 뒤에 달러 표시를 갖는다. 
+ - 
 
 (4) Managing Users in AD
  - 세상에는 보편적으로 쓰이는 검색 엔진이외에도 특별한 검색엔진있다. 이러한 검색엔진은 사용자에게 특별한 결과를 제공한다.
