--- a/Cyber_Security_101/2.Active_Directory_Basics.md
+++ b/Cyber_Security_101/2.Active_Directory_Basics.md
@@ -33,8 +33,15 @@
  - Users : 사용자는 액티브 디렉터리에 존재하는 가장 흔한 개체 중 하나이다. 사용자는 보안 원칙으로 알려진 개체 중의 하나로, 그 이유는 사용자는 도메인으로부터 권한을 받거나 파일이나 프린터들 같은 자원들을 사용할 권리를 갖기 때문이다. 사용자는 크게 다음과 같은 엔티티로 나타내어진다.
    1) People : 사용자는 직원과 같이 조직에서 네트워크에 접속이 필요한 개인으로 대표된다.
    2) Services : 유저를 IIS나 MSSQL 같은 서비스를 사용하는 사용자로 정의할 수 있다. 이러한 식으로 정의된 사용자는 보통 사용자와는 다르며, 이들은 오직 서비스를 실행시키는 권한만을 갖는다.
- - Machines : 모든 컴퓨터가 액티브 디렉터리 도메인에 접속할 때, 머신 오브젝트는 생성된다. 머신 또한 보안 원칙 오브젝트로 취급되며 보통 사용자 계정과 같은 권한을 같지만 몇몇에 대해서는 제한된 권리를 가진다. 머신 계정은 로컬 관리자 계정이기에 패스워드를 알고 있지 않은 한 이 컴퓨터 이외로는 접속할 수 없다. 머신 계정의 패스워드는 자동적으로 갱신되는 120글자의 난수로 이뤄져 있다. 이러한 머신 계정을 알아내는 것은 비교적 쉬운데 이러한 계정은 특별한 작명법을 가진다. 머신 계정은 항상 컴퓨터 이름 뒤에 달러 표시를 갖는다. 
- - 
+ - Machines : 모든 컴퓨터가 액티브 디렉터리 도메인에 접속할 때, 머신 오브젝트는 생성된다. 머신 또한 보안 원칙 오브젝트로 취급되며 보통 사용자 계정과 같은 권한을 같지만 몇몇에 대해서는 제한된 권리를 가진다. 머신 계정은 로컬 관리자 계정이기에 패스워드를 알고 있지 않은 한 이 컴퓨터 이외로는 접속할 수 없다. 머신 계정의 패스워드는 자동적으로 갱신되는 120글자의 난수로 이뤄져 있다. 이러한 머신 계정을 알아내는 것은 비교적 쉬운데 이러한 계정은 특별한 작명법을 가진다. 머신 계정은 항상 컴퓨터 이름 뒤에 달러 표시를 갖는다.
+ - Security Groups : 윈도우에서는 사용자들을 여러 그룹으로 나눠 그룹에 따라 파일이나 폴더에 대한 권한을 부여할 수 있다. 이러한 조치들은 기존 그룹에 사용자를 추가할 때 높은 응용성을 발휘할 수 있다. 시큐리티 그룹도 네트워크를 통해 각종 자원들에 관한 권한을 가진다. 그룹은 사용자와 머신을 구성원으로 둘 수 있다. 몇몇 그룹들은 도메인에 디폴트적으로 생성된다.
+   1) Domain Admins : 모든 도메인에 대한 접근 권한을 가진 사용자들이 있는 관리자 그룹이다. DC를 포함한 모든 컴퓨터, 도메인을 관리할 수 있다.
+   2) Server Operators : 도메인 컨트롤러를 관리할 수 있는 사용자들의 그룹이다. 관리 그룹 멤버를 바꿀 권한은 없다.
+   3) Backup Operators : 이 그룹의 사용자들은 모든 파일들에 대해 권한을 무시하고 접근할 수 있다. 데이터 백업을 할 시 사용한다.
+   4) Account Operators : 이 그룹의 사용자들은 도메인의 계정을 만들거나 수정할 수 있다.
+   5) Domain Users :
+   6) Domain Computers :
+   7) Domain Controllers : 
 
 (4) Managing Users in AD
  - 세상에는 보편적으로 쓰이는 검색 엔진이외에도 특별한 검색엔진있다. 이러한 검색엔진은 사용자에게 특별한 결과를 제공한다.
