--- a/Cyber_Security_101/2.Active_Directory_Basics.md
+++ b/Cyber_Security_101/2.Active_Directory_Basics.md
@@ -19,7 +19,7 @@
 (2) Windows Domains
  - 우리가 네트워크 사업을 하고 있다고 생각해보자. 네트워크의 구성원이 다섯 명뿐이라면 네트워크에 문제가 생길 시 우리는 바로바로 그 문제점을 고칠 수 있다.
  - 하지만 네트워크의 구성원이 많으면 많아질수록 등록되어 있는 기기가 많으면 많아질수록 그러한 관리가 어려워질 것이란 건 예상하기 쉽다.
- - 이러한 한께를 극복하기 위해 우리는 윈도우 도메인을 사용할 수 있다.
+ - 이러한 한계를 극복하기 위해 우리는 윈도우 도메인을 사용할 수 있다.
  - 윈도우 도메인이란 그룹에 속해 있는 여러 사용자와 컴퓨터들을 묶어서 관리할 수 있게 하는 도구로 이러한 도메인은 액티브 디렉터리(AD:Active Directory)라는 하나의 저장소를 가진다.
  - 액티브 디렉터리를 실행하고 관리하는 서비스를 Domain Controller(DC)라고 부른다.
  - 윈도우 도메인을 가질 때의 주된 장점은 다음과 같다.
@@ -35,13 +35,14 @@
    2) Services : 유저를 IIS나 MSSQL 같은 서비스를 사용하는 사용자로 정의할 수 있다. 이러한 식으로 정의된 사용자는 보통 사용자와는 다르며, 이들은 오직 서비스를 실행시키는 권한만을 갖는다.
  - Machines : 모든 컴퓨터가 액티브 디렉터리 도메인에 접속할 때, 머신 오브젝트는 생성된다. 머신 또한 보안 원칙 오브젝트로 취급되며 보통 사용자 계정과 같은 권한을 같지만 몇몇에 대해서는 제한된 권리를 가진다. 머신 계정은 로컬 관리자 계정이기에 패스워드를 알고 있지 않은 한 이 컴퓨터 이외로는 접속할 수 없다. 머신 계정의 패스워드는 자동적으로 갱신되는 120글자의 난수로 이뤄져 있다. 이러한 머신 계정을 알아내는 것은 비교적 쉬운데 이러한 계정은 특별한 작명법을 가진다. 머신 계정은 항상 컴퓨터 이름 뒤에 달러 표시를 갖는다.
  - Security Groups : 윈도우에서는 사용자들을 여러 그룹으로 나눠 그룹에 따라 파일이나 폴더에 대한 권한을 부여할 수 있다. 이러한 조치들은 기존 그룹에 사용자를 추가할 때 높은 응용성을 발휘할 수 있다. 시큐리티 그룹도 네트워크를 통해 각종 자원들에 관한 권한을 가진다. 그룹은 사용자와 머신을 구성원으로 둘 수 있다. 몇몇 그룹들은 도메인에 디폴트적으로 생성된다.
-   1) Domain Admins : 모든 도메인에 대한 접근 권한을 가진 사용자들이 있는 관리자 그룹이다. DC를 포함한 모든 컴퓨터, 도메인을 관리할 수 있다.
+   1) Domain Admins : 모든 도메인에 대한 접근 권한을 가진 사용자들이 있는 관리자 그룹이다. DC를 포함한 모든 컴퓨터, 도메인을 관리할 수 있다. 
    2) Server Operators : 도메인 컨트롤러를 관리할 수 있는 사용자들의 그룹이다. 관리 그룹 멤버를 바꿀 권한은 없다.
    3) Backup Operators : 이 그룹의 사용자들은 모든 파일들에 대해 권한을 무시하고 접근할 수 있다. 데이터 백업을 할 시 사용한다.
    4) Account Operators : 이 그룹의 사용자들은 도메인의 계정을 만들거나 수정할 수 있다.
-   5) Domain Users :
-   6) Domain Computers :
-   7) Domain Controllers : 
+   5) Domain Users : 도메인에 존재하는 모든 사용자 계정을 포함시킨다.
+   6) Domain Computers : 도메인에 존재하는 모든 컴퓨터를 포함시킨다.
+   7) Domain Controllers : 도메인에 존재하는 모든 도메인 컨트롤러를 포함시킨다.
+ - Acitve Directory Users and Computers : 우리가 사용자나 그룹 머신을 만들기 위해서는 도메인 컨트롤러에 로그인하고 'Active Directory Users and Computers'를 실행시킬 필요가 있다. 
 
 (4) Managing Users in AD
  - 세상에는 보편적으로 쓰이는 검색 엔진이외에도 특별한 검색엔진있다. 이러한 검색엔진은 사용자에게 특별한 결과를 제공한다.
