--- a/Cyber_Security_101/2.Active_Directory_Basics.md
+++ b/Cyber_Security_101/2.Active_Directory_Basics.md
@@ -42,8 +42,15 @@
    5) Domain Users : 도메인에 존재하는 모든 사용자 계정을 포함시킨다.
    6) Domain Computers : 도메인에 존재하는 모든 컴퓨터를 포함시킨다.
    7) Domain Controllers : 도메인에 존재하는 모든 도메인 컨트롤러를 포함시킨다.
- - Acitve Directory Users and Computers : 우리가 사용자나 그룹 머신을 만들기 위해서는 도메인 컨트롤러에 로그인하고 'Active Directory Users and Computers'를 실행시킬 필요가 있다. 
-
+ - Acitve Directory Users and Computers : 우리가 사용자나 그룹 머신을 만들기 위해서는 도메인 컨트롤러에 로그인하고 'Active Directory Users and Computers'를 실행시킬 필요가 있다. 이러한 서비스를 이용하면 도메인에 존재하는 사용자 계정이나 그룹, 컴퓨터의 관계를 알 수 있다. 이러한 객체들은 Organizational Units(OUs)를 통해 조직되어진다. 이 서비스는 비슷한 보안 정책을 사용할 때 편의성을 위해 사용한다. 다음은 이러한 OU 서비스에서 기본적으로 생성되는 컨테이너들의 목록이다.
+   1) Builtin : 윈도우 호스트로 사용할 수 있는 디폴트 그룹들을 포함한다.
+   2) Computers : 네트워크에 참여하는 머신들은 기놉적으로 전부 여기에 포함된다. 만약 너가 필요하다면 옮길 수 있다.
+   3) Domain Controllers : 네트워크에 있는 기본적인 도메인 컨트롤러를 포함한 OU(Organizational Unit)이다.
+   4) Users : 도메인 와이드를 적용한 기본적인 사용자와 그룹들이다.
+   5) Managed Service Accounts : 윈도우 도메인에서 서비스되는 계정들을 갖고 있는다.
+ - 그룹과 OUs는 사용자와 컴퓨터들을 구분한다는 역학을 가지고 있지만 그 목적에 대해서는 완전히 다르다.
+ - OUs는 사용자와 컴퓨터에 정책을 적용하는 것을 쉽게 하기 위함이다.
+ - Security Groups은 자원을 넘나들고 권한을 주기 위해 사용한다.
 (4) Managing Users in AD
  - 세상에는 보편적으로 쓰이는 검색 엔진이외에도 특별한 검색엔진있다. 이러한 검색엔진은 사용자에게 특별한 결과를 제공한다.
  - Shodan : 인터넷에 연결된 기기들의 정보를 담고 있는 검색엔진으로 서버, 네트워크 장비, 산업 제어 시스템, 사물 인터넷 정보들을 얻을 수 있다.
