--- a/Cyber_Security_101/2.Active_Directory_Basics.md
+++ b/Cyber_Security_101/2.Active_Directory_Basics.md
@@ -52,12 +52,9 @@
  - OUs는 사용자와 컴퓨터에 정책을 적용하는 것을 쉽게 하기 위함이다.
  - Security Groups은 자원을 넘나들고 권한을 주기 위해 사용한다.
 (4) Managing Users in AD
- - 세상에는 보편적으로 쓰이는 검색 엔진이외에도 특별한 검색엔진있다. 이러한 검색엔진은 사용자에게 특별한 결과를 제공한다.
- - Shodan : 인터넷에 연결된 기기들의 정보를 담고 있는 검색엔진으로 서버, 네트워크 장비, 산업 제어 시스템, 사물 인터넷 정보들을 얻을 수 있다.
- - Censys : 쇼단과 비슷하지만 쇼단은 인터넷에 연결되어 잇는 기기나 시스템을 중점을 두었고 반면에 켄시스는 인터넷에 연결되어 잇는 호스트, 웹사이트 등의 에셋에 중점을 두었다.
- - VirusTotal : 여러 개의 안티바이러스 엔진을 통해 바이러스 스캐닝 서비스를 공급하는 웹사이트이다. 사용자는 검사하고자 하는 파일이나 url을 올려 검사를 진행한다. 내부 커뮤니티가 있어 바이러스에 대한 자세함 설명이나 해석들을 공유할 수 있다.
- - Have I Been Pwned : 이메일 주소를 통해 이메일에서 사용자의 민감한 정보가 유출됐는지 안 됐는지 알아낸다. 대부분으니 사용자들은 똑같은 비밀번호를 여러 개의 사이트에서 사용하기에 이 부분에 대해 주의가 필요하다.
-   
+ - 도메인 관리자의 첫일은 존재하는 액티브 디렉터리의 사용자들을 찾는 일이다.
+ - Deleting extra OUs and users : 일단 AD에 없는 다른 OU(Organizational Unit)이 있는지 확인해봐야 한다. 있고 사용을 하지 않는다면 예산 상의 이유로라도 삭제해야 한다. 만약 사용하는 것을 의도치 않게 삭제한다면 다시 만들어야 한다.
+ - Delegation : 액티브 디렉터리에서 할 수 있는 일 중 하나는 특정 사용자에게 제어권을 줄 수 있다는 점이다. 도메인 관리자의 도움 없이 사용자에게 권한을 부여할 수 있다.
 (5) Group Policies
  - CVE(Common Vulenabilities and Exposures) : 간단하게 말하자면 취약점들의 사전이다. 하드웨어나 소프트웨어에서 발생하는 다양한 취약점과 보안 이슈들의 표준화된 식별자를 제공한다.
  - 각 취약점들은 CVE ID라는 식별자를 가지는데 이 식별자는 사용자들이 해당 취약점을 겪었던 사례들을 들여다볼 수 있게 한다.
