--- a/Cyber_Security_101/2.Active_Directory_Basics.md
+++ b/Cyber_Security_101/2.Active_Directory_Basics.md
@@ -2,7 +2,7 @@
 
 
 ## 실습 일시
- - 2025-07-29
+ - 2025-07-29, 2025-10-20
 
 
 ## 실습 주제
@@ -75,11 +75,37 @@
  
 (7) Authentication Methods
  - 윈도우 도메인을 이용할 때, 모든 인증서들은 도메인 컨트롤러에 저장된다. 만약 사용자가 이러한 인증서를 사용하는 서비스에 접근할 때, 서비스는 도메인 컨트롤러에 사용자가 적절한 사용자인지 판별을 요청한다.
-   
-(8) Conclusion
- - 정보 보안 전문가각 되기 위해서는 많은 것을 알아야 한다.
- - 하지만 모든 것을 알 수는 없기에 우리는 항상 귀를 열고 최신 정보에 민감해야 하며 그러한 정보를 알려주는 소스들을 가까이 두어야 한다.
-   
+ - 윈도우 도메인에서 네트워크 인증에 주로 사용하는 프로토콜은 다음 두가지이다.
+   1) Kerberos : 최근 윈도우 버전에서 사용하고, 가장 기본적으로 설정되는 프로토콜이다.
+   2) NetNTLM : 호환성 떄문에 사용하는 인증 프로토콜이다.
+ - NetNTLM이 쓸모없게 될 때까지 대부분의 네트워크에서는 둘 모두 사용하였다.
+ 
+(8) Kerberos Authentication
+ - Kerberos 인증은 윈도우의 어떤 버전에서나 기본적인 인증 프로토콜이다.
+ - 커버로스를 이용하여 로그인한 사용자는 티켓을 부여받는다. 이 티켓들은 이전 인증의 증거물로 활용된다. 그렇기에 이 티켓을 소유한다는건 사용자가 이전에도 서비스에 인증받았다는 것을 보여준다.
+ - 커버로스 인증 과정은 다음과 같다.
+   1) 유저이름과 키를 통해 암호화된 타임스탬프를 Key Distribution Center(KDC)에 전송한다.
+   2) KDC가 Ticket Granting Ticket(TGT)를 생성하고 사용자에게 돌려준다. 이를 줌으로써 세션키도 동시에 사용자에게 보내진다.
+   3) 사용자가 데이터베이스와 같은 서비스에 접속하고 싶을 때 TGT는 KDC에 Ticket Granting Service(TGS)에 대해 요청한다. 이를 위해 사용자는 KDC에 사용자 이름과 세션키로 암호화된 타임스탬프를 같이 보낸다.
+   4) 그 결과, KDC는 사용자에게 TGS와 Service Session Key를 주고, 사용자는 그를 이용해 원하는 서비스에 접속을 한다.
+
+(9) NetNTLM Authentication
+ - NetNTLM 인증은 challenge-response 매커니즘을 사용하여 진행한다.
+   1) 사용자가 접속하고자 하는 서버에 인증 요청을 보낸다.
+   2) 서버가 무작위수를 생성하고 클라이언트에게 챌린지로 전송한다.
+   3) 사용자는 소유하고 있는 NTLM 패스워드 해시값과 챌린지값을 결합하여 인증을 위해 사용하는 반응값을 생성한다.
+   4) 서버는 챌린지값과 반응값을 Domain Controller에 보내고 인증을 요청한다.
+   5) DC는 챌린지값을 이용해 반응값을 재계산하고 이를 원본과 비교하여 비교 결과를 서버에 전송한다.
+   6) 서버는 비교 결과를 사용자에게 전송한다.
+ - 사용자의 암호(혹은 해시값)은 변경되지 않는다.
+
+(10) Trees, Forests and Trusts
+ - 기업이 작을 때는 하나의 도메인만을 가지고 관리가 가능할 수 있지만 기업이 커지면 하나의 도메인 만으로는 한계가 생긴다.
+ - 운좋게도, 액티브 디렉터리는 여러 개의 도메인의 통합을 지원한다. 우리는 여러 개의 도메인들을 Tree라는 이름의 시스템에 통합시킨다.
+ - 
+
+
+(11) Conclusions
 
 ## 사용 도구 및 명행령어   
  - 명령어를 사용하지 않았다. 
