--- a/Cyber_Security_101/2.Active_Directory_Basics.md
+++ b/Cyber_Security_101/2.Active_Directory_Basics.md
@@ -102,31 +102,29 @@
 (10) Trees, Forests and Trusts
  - 기업이 작을 때는 하나의 도메인만을 가지고 관리가 가능할 수 있지만 기업이 커지면 하나의 도메인 만으로는 한계가 생긴다.
  - 운좋게도, 액티브 디렉터리는 여러 개의 도메인의 통합을 지원한다. 우리는 여러 개의 도메인들을 Tree라는 이름의 시스템에 통합시킨다.
- - 
+ - 이러한 도메인 통합 관리 시스템은 사용자에게 더 좋은 경험을 제공한다.
+ - 만약 기업이 더 커져서 여러 개의 기업을 관리하고 그에 맞게 여러 개의 트리들을 관리하게 된다면 우리는 트리들의 집합인 forest를 사용한다.
+ - 이렇게 여러 개의 트리와 포레스트의 사용은 관리와 자원 사용의 측면에서 뛰어난 분리 네트워크 구조를 갖게 한다. 
 
 
 (11) Conclusions
+ - 이제까지의 복습
 
+   
 ## 사용 도구 및 명행령어   
  - 명령어를 사용하지 않았다. 
    
 
-
 ## 배운 점
- - 'filetype:', 'site:' 등 특정 파일 타입만을 보이게 하거나 사이트를 국한해서 검색하는 등 검색엔진의 다양한 활용법에 대해 배웠다.
- - 쇼단과 Censys등 평소에 접해보지 않았던 사이트를 접해보고 경험해보았다.
- - 우리가 흔히 사용하는 소셜 미디어의 최신 정보를 빨리 알 수 있고 트렌드를 파악할 수 있다는 순기능도 배웠다.
+ - 여러 가지를 배웠지만 싫증나서 떄려 친 기간이 너무 길어 이제 뭘 배웠는지도 기억나지 않는다.
 
 
 ## 실무 적용 가능성
- - 오늘 검색 엔진 부분에서 배웠던 여러 가지 조건들을 걸고 찾는 방식은 실무에서 자표를 찾을 때 요긴하게 써먹을 수 있을 것 같다.
- - Shodan, Censys, Virustotal 같은 사이트들은 실무에서 파일이나 폴더에 바이러스가 있을 때 확인하거나 취약점이 발생되었을 때 어떤 취약점인지 찾기 위해서 사용할 것 같다.
+ - 다음 세션부터는 잘하자 나
 
 
 ## 느낀 점
- - 이번에 배운 내용들은 새로운 카테고리에 있는 내용들이라 그런지 신선했고 배운다는 느낌이 났다.
- - 우리가 당연하게 생각해왔던 정보들의 출처를 확인하라 신뢰할 만한지를 확인하라 를 다시 읽으면서 배우니 정말 중요하다는 것을 느꼈다.
- - 정보보안기사 준비 시 '쇼단'에 대한 내용이 나오는데 그래서 그런지 친근하게 느껴졌다.
-   
+ - 이번 파트는 중간에 포기했던 파트이다. 이걸 하면서 내 실력이 느냐, 지식이 느냐 는 둘째 치고 너무 지루하고 재미가 없었다.
+ - 난 이번 파트를 끝으로 앞으로 안 할까 생각했지만 결국 돌아와 이번 파트를 끝마치고 다음 파트도 할 생각이기에 결국 내 승리다.
 ## 실습 화면 기록
-![실습 결과](images/Search_Skills.png)
+![실습 결과](images/Active_Directory_Basics.png)
