--- a/Cyber_Security_101/3.Windows_Command_Line.md
+++ b/Cyber_Security_101/3.Windows_Command_Line.md
@@ -20,60 +20,81 @@
    4) Check running processes
       
 (2) Basic System Information
- - 인터넷에서는 누구나 자신이 쓴 글을 블로그나 위키, 기사의 형태로 올릴 수 있다.
- - 우리는 다양한 형태로 게재되어있는 정보들을 평가하고 걸러낼 줄 알아야 한다. 정보들을 걸러낼 시에 몇가지 고려하여야 하는 사항들이 있다.
-   1) Source : 글을 게시한 조직이나 저자를 확인하라. 정보를 게시한 사람이 그 분야세어 명성이 있거나 권위가 있는지 생각하라
-   2) Evidence and reasoning : 주장에 신뢰할 만한 증거가 있거나 논리적인 추론이 있는지 검사하라. 우리가 찾고 있는 건 변하지 않는 진실이다. 
-   3) Objectivity and bias : 정보가 중립적으로 이성적으로 다수의 의견을 반영하는지 평가하라. 우리는 저자가 지지하는 어젠다나 경쟁 상대를 공격하는 것에 관심이 없다.
-   4) Corroboration and consistency : 게재되어 있는 정보가 여러 개의 독립적인 자료들로 뒷받침 되는지 검증하라. 주된 주장이 여러 곳의 신뢰할 수 있고 명성이 있는 곳에서도 동의하는지 체크하라.
- - Snake oil : 위법이나 사기로 생각될 수 있는 기법이나 상품들의 총칭
+ - 명령어
+   1) set : command line의 path를 확인하기 위해 사용한다.
+   2) ver : 운영체제 버전을 확인하기 위해 사용한다.
+   3) systeminfo : 운영체제 정보, 시스템 세부사항, 프로세서와 메모리 정보 같은 다양한 정보들의 목록을 보여준다.
+   4) help : 특정 명령어들의 도움말을 제공한다.
+   5) cls : 명령어 프롬프트 화면을 청소한다.
    
 (3) Network Troubleshooting
- - 많은 사람들이 검색 엔진을 사용하고 있지만 모든 능력을 이끌어내지는 않는다.
- - 'site:example.com' : 검색어를 입력할 때 이 명령어를 쓰면 예로 든 사이트 내에서 검색되어진다.(site:facebook.com 장갑차 -> 페이스북 사이트 내에 있는 장갑차 정보만 출력한다.)
- - '-' : 여집합 개념이다. 검색할 시 이 명령어를 쓰면 해당 키워드를 가진 정보는 출력되지 않는다.(이집트 - 피라미드 -> 피라미드를 제외한 이집트에 대한 내용이 출력된다.)
- - 'filetype:' : 조건으로 세운 파일 확장자만을 출력한다.(filetype:pdf 재무제표 -> 재무제표에 대한 내용 중 pdf 파일만을 출력한다.) 
+ - 우리는 주로 GUI를 이용하여 윈도우 네트워크 구성에 관해 살펴본다.
+ - 이것과 마찬가지로 CLI 또한 명령어들을 통해 현재 연결 상태와 구성, 트러블슈팅 정보 등을 제공한다.
+   1) ipconfig : IP주소, 서브넷마스크, 게이트웨이 같은 다양한 네트워크 정보들을 확인하는 명령어이다. 여기서 추가 정보를 얻고 싶으면 'ipconfig /all' 명령어를 사용하면 좋다.
+ - 트러블슈팅을 수행하는 흔한 방법 중 하나는 특정 서버와의 연결을 시도하는 것이다.
+   1) ping : 특정 서버에 ICMP 패킷을 보내고 응답을 받는 명령어이다. 제대로 응답을 받았다면 서로 연결된 것이다.
+   2) tracert : tracert는 trace route의 약어로, 목적지까지 몇개의 루트를 거쳐갔는지 확인할 수 있는 명령어이다.
+   3) nslookup : 호스트 혹은 도메인을 살펴보거나 이들의 IP주소를 출력한다.
+   4) netstat : 현재 연결되어 있는 네트워크 연결 정보와 포트 정보를 출력한다. netstat 명령어에는 다양한 옵션이 있는데 정리하자면 다음과 같다.
+      1. -a : 연결되어 있는 모든 연결 정보와 포트들을 출력한다.
+      2. -b : 연결 포트에 연관된 프로그램들을 보여준다.
+      3. -o : 연결되어 있는 프로세스 아이디(PID)를 보여준다.
+      4. -n : 주소와 포트 번호의 숫자 폼을 사용한다.  
 
 (4) File and Disk Management
- - 세상에는 보편적으로 쓰이는 검색 엔진이외에도 특별한 검색엔진있다. 이러한 검색엔진은 사용자에게 특별한 결과를 제공한다.
- - Shodan : 인터넷에 연결된 기기들의 정보를 담고 있는 검색엔진으로 서버, 네트워크 장비, 산업 제어 시스템, 사물 인터넷 정보들을 얻을 수 있다.
- - Censys : 쇼단과 비슷하지만 쇼단은 인터넷에 연결되어 잇는 기기나 시스템을 중점을 두었고 반면에 켄시스는 인터넷에 연결되어 잇는 호스트, 웹사이트 등의 에셋에 중점을 두었다.
- - VirusTotal : 여러 개의 안티바이러스 엔진을 통해 바이러스 스캐닝 서비스를 공급하는 웹사이트이다. 사용자는 검사하고자 하는 파일이나 url을 올려 검사를 진행한다. 내부 커뮤니티가 있어 바이러스에 대한 자세함 설명이나 해석들을 공유할 수 있다.
- - Have I Been Pwned : 이메일 주소를 통해 이메일에서 사용자의 민감한 정보가 유출됐는지 안 됐는지 알아낸다. 대부분으니 사용자들은 똑같은 비밀번호를 여러 개의 사이트에서 사용하기에 이 부분에 대해 주의가 필요하다.
-   
+ - 이번 장에서 배울 것은 디렉터리를 찾는 방법과 파일을 옮기는 방법을 배울 것이다.
+   1) cd : 파라미터값 없이 사용한다면 현재 위치하고 있는 드라이브 경로를 보여준다.
+      1. cd target_directory : target_directory로 이동한다.
+      2. cd .. : 첫번째 디렉터리로 이동한다.
+   2) dir : 현 드라이브에 존재하는 디렉터리들의 목록을 출력한다.
+      1. /a : 숨겨져 있는 시스템 파일도 같이 출력한다.
+      2. /s : 위치하고 있는 디렉터리와 서브디렉터리의 파일들을 전부 출력한다.
+   3) tree : 자식 디렉터리와 서브디렉터리들을 출력한다.
+   4) mkdir : 디렉터리를 생성하는 명령어이다.
+   5) rmdir : 디렉터리를 제거하는 명령어이다.
+   6) copy : 파일을 복사하는 명령어이다. (copy originalfile.txt copyfile.txt)
+   7) move : 파일을 옮기는 명령어이다. (move targetfile.txt ..)
+   8) del or erase : 파일을 제거하는 명령어이다. (del targetfile.txt)
 (5) Task and Process Management
- - CVE(Common Vulenabilities and Exposures) : 간단하게 말하자면 취약점들의 사전이다. 하드웨어나 소프트웨어에서 발생하는 다양한 취약점과 보안 이슈들의 표준화된 식별자를 제공한다.
- - 각 취약점들은 CVE ID라는 식별자를 가지는데 이 식별자는 사용자들이 해당 취약점을 겪었던 사례들을 들여다볼 수 있게 한다.
- - MITRE Corporation이 해당 시스템을 유지하고 있다.
- - Exploit Database : 앱의 취약점을 악용하는 데는 많은 이유가 있다. 당연한 말이지만 우리는 허가 없이 취약점을 악용하지 말아야 한다.
- - 만약 우리한테 그러한 허가가 떨어진다면 우리는 악용될 수 있는 코드를 찾아야한다. 그 방법 중 하나가 Exploit Database이다.
- - 이 사이트에서 사용자는 검증된 악용할 수 있는 코드들의 목록을 볼 수 있다.
+ - 이번 장에서는 현재 실행되고 있는 프로세스 관리에 필요한 명령어들을 배울 것이다.
+   1) tasklist : 현재 실행 중인 프로세스의 목록을 출력한다.
+      1. /FI : 필터 역할을 하는 옵션이다. 수많은 프로세스 중 목표로 하는 프로세스를 검색하는 데 유용하다. (tasklist /FI "imagename eq sshd.exe")
+      2. /PID : 프로세스 아이디를 통해 해당 프로세스를 검색한다. (taskkill /PID targetPID)
    
 (6) Conclusion
- - 리눅스 시스템에서 공식 문서를 볼 수 있는 중요한 기술이 있다.
+ - 우리가 이번 장에서 배운 네트워크 명령어들은 기본적인 명령어들이다.
+ - 추가적인 명령어들이 많기 때문에 우리는 배움을 게을리 해서는 안된다.
  
    
 
 ## 사용 도구 및 명행령어   
- - 명령어를 사용하지 않았다. 
-   
+ - ssh user@10.201.69.89 : ssh프로토콜을 사용하여 사용자 이름이 'user'이고, IP주소가 '10.201.69.89'인 계정을 원격 서버에 로그인
+ - ver : 운영체제 버전 확인
+ - systeminfo : 운영체제 정보, 시스템 정보와 같은 다양한 정보들의 목록을 출력
+ - ipconfig /all : ip주소 MAC주소 등 여러가지 네트워크 정보를 확인할 수 있다.
+ - netstat -ab  : 네트워크에 연결되어 있는 모든 연결 정보를 보여주고 그 연결에 연관되어 있는 프로그램 정보들을 보여준다.
+ - dir : 현재 드라이브에 존재하는 디렉터리의 목록을 출력한다.
+ - cd targetdir : 타겟 디렉터리로 이동한다.
+ - tasklist /FI "imagename eq notepad.exe" : notepad.exe 와 관련된 프로세스 목록들을 출력한다.
+ - taskkill /PID 1516 : 프로세스 아이디가 1516인 프로세스를 강제 종료한다.
 
 
 ## 배운 점
- - 'filetype:', 'site:' 등 특정 파일 타입만을 보이게 하거나 사이트를 국한해서 검색하는 등 검색엔진의 다양한 활용법에 대해 배웠다.
- - 쇼단과 Censys등 평소에 접해보지 않았던 사이트를 접해보고 경험해보았다.
- - 우리가 흔히 사용하는 소셜 미디어의 최신 정보를 빨리 알 수 있고 트렌드를 파악할 수 있다는 순기능도 배웠다.
+ - 느린 네트워크 환경이나 자원이 제한된 환경에서 자원소모가 적다는 CLI의 장점이 부각된다는 것을 배웠다.
+ - 각 네트워크 명령어 뿐만 아니라 netstat -a,-b,-o,-n과 같이 그에 사용할 수 있는 옵션들에 대해서도 많이 배웠다.
+ - 프로세스를 관리하는 명령어인 tasklist와 taskkill에 대해서 청므 배웠다.
 
 
 ## 실무 적용 가능성
- - 오늘 검색 엔진 부분에서 배웠던 여러 가지 조건들을 걸고 찾는 방식은 실무에서 자표를 찾을 때 요긴하게 써먹을 수 있을 것 같다.
- - Shodan, Censys, Virustotal 같은 사이트들은 실무에서 파일이나 폴더에 바이러스가 있을 때 확인하거나 취약점이 발생되었을 때 어떤 취약점인지 찾기 위해서 사용할 것 같다.
+ - 애초에 CLI가 우리가 흔히 쓰는 GUI의 상위호환과 같은 것이기에 컴퓨터를 사용하며 업무를 진행하는 이상 손발처럼 사용해야 한다는 것을 느꼈다.
+ - 만약 내가 회사에 들어가서 실무를 윈도우로 하는 이상 오늘 배운 내용은 내가 은퇴할 때까지 사용해야 한다고 생각한다.
+ - 실무 적용 가능성이 대단히 높다.
 
 
 ## 느낀 점
- - 이번에 배운 내용들은 새로운 카테고리에 있는 내용들이라 그런지 신선했고 배운다는 느낌이 났다.
- - 우리가 당연하게 생각해왔던 정보들의 출처를 확인하라 신뢰할 만한지를 확인하라 를 다시 읽으면서 배우니 정말 중요하다는 것을 느꼈다.
- - 정보보안기사 준비 시 '쇼단'에 대한 내용이 나오는데 그래서 그런지 친근하게 느껴졌다.
+ - 오늘 배운 명령어 중에는 처음으로 배운 명령어도 있고 새롭게 배운 명령어도 존재한다. 하지만 학습하는 데 크게 어려움을 느끼지는 않았다.
+ - 내용의 수준이 조금 낮다보니 내가 이걸 배우는 것이 많이 늦었구나 라고 느꼈다. 다른 사람보다 뒤처진다는 느낌이 많이 들었다.
+ - 실습과 학습을 계속 해야겠지만 더 빨리 나가는 것이 좋지 않을까라는 생각도 들었다.
    
 ## 실습 화면 기록
-![실습 결과](images/Search_Skills.png)
+![실습 결과](images/Window_Command_Line.png)
