--- a/Cyber_Security_101/7.Networking Concepts.md
+++ b/Cyber_Security_101/7.Networking Concepts.md
@@ -47,14 +47,21 @@
  - 우리는 원활한 통신과 정확한 통신을 위해 개인을 특정할 수 있는 코드들이 필요하다. 이때 쓰이는 코드들이 우리가 잘 아는 IP 주소이다.
  - IP 주소의 구성은 다음 그림과 같다.
  - <img width="910" height="415" alt="스크린샷 2025-10-22 111546" src="https://github.com/user-attachments/assets/e02f9420-76bd-4bed-89f3-ef122fa4ec70" />
+ - 자신의 IP주소는 터미널에 ipconfig 명령어를 사용하면 된다.
+ - IP주소는 사설 IP주소와 공공 IP주소로 나눠지는데 사설 IP 주소의 범위는 다음과 같이 정해져 있다. 그 외에는 전부 공공 IP 주소이다.
+   1) 10.0.0.0 ~ 10.255.255.255
+   2) 172.16.0.0 ~ 172.31.255.255
+   3) 192.168.0.0 ~ 192.168.255.255
+ - 라우팅 : 라우터는 쿠팡 허브와 같다. 우리가 물품을 주문할 시 쿠팡 허브를 통해 건너건너 오듯 우리 통신 패킷들도 라우터들을 통해 건너건너 온다. 이러한 일련의 과정들을 라우팅이라 한다.
 
-   
 (5) UDP and TCP
- - 이번 장에서는 현재 실행되고 있는 프로세스 관리에 필요한 명령어들을 배울 것이다.
-   1) tasklist : 현재 실행 중인 프로세스의 목록을 출력한다.
-      1. /FI : 필터 역할을 하는 옵션이다. 수많은 프로세스 중 목표로 하는 프로세스를 검색하는 데 유용하다. (tasklist /FI "imagename eq sshd.exe")
-      2. /PID : 프로세스 아이디를 통해 해당 프로세스를 검색한다. (taskkill /PID targetPID)
-   
+ - UDP(User Datagram Protocol) : 간단한 비연결형 프로토콜로 전송 계층에서 동작한다. 비연결형이기에 연결이 필요 없고 그렇기에 내가 보낸 패킷이 잘 도착했는지 알 방법이 없다.
+ - TCP(Transmission Control Protocol) : 연결 지향적인 전송 프로토콜이다. 데이터 전송 전에 연결을 수립할 필요가 있고 그에 맞게 안전한 데이터 전송을 보장한다. TCP 연결은 3-way handshake라는 다음의 과정을 거쳐 수립된다.
+   1) SYN Packet : 클라이언트가 서버에게 SYN(Synchronise)패킷을 보냄으로써 연결을 시도한다. 이 패킷은 클라이언트가 정한 시작 시퀸스 번호를 가진다.
+   2) SYN-ACK Packet : 서버는 SYN패킷에 대한 응답으로 클라이언트에게 SYN-ACK 패킷을 보낸다. 이 패킷에는 시퀸스 번호 뒤에 서버가 정한 무작위 번호가 추가된다.
+   3) ACK Packet : 클라이언트는 SYN-ACK Packet의 회답으로 서버에게 ACK(Acknowledge)패킷을 보내고 3-way handshake과정이 끝났음을 알린다.
+   cf) <img width="1336" height="678" alt="스크린샷 2025-10-22 115008" src="https://github.com/user-attachments/assets/947529a9-d035-4346-9376-490fdd12a0f5" />
+
 (6) Encapsulation
  - 우리가 이번 장에서 배운 네트워크 명령어들은 기본적인 명령어들이다.
  - 추가적인 명령어들이 많기 때문에 우리는 배움을 게을리 해서는 안된다.
@@ -66,15 +73,8 @@
    
 
 ## 사용 도구 및 명행령어   
- - ssh user@10.201.69.89 : ssh프로토콜을 사용하여 사용자 이름이 'user'이고, IP주소가 '10.201.69.89'인 계정을 원격 서버에 로그인
- - ver : 운영체제 버전 확인
- - systeminfo : 운영체제 정보, 시스템 정보와 같은 다양한 정보들의 목록을 출력
- - ipconfig /all : ip주소 MAC주소 등 여러가지 네트워크 정보를 확인할 수 있다.
- - netstat -ab  : 네트워크에 연결되어 있는 모든 연결 정보를 보여주고 그 연결에 연관되어 있는 프로그램 정보들을 보여준다.
- - dir : 현재 드라이브에 존재하는 디렉터리의 목록을 출력한다.
- - cd targetdir : 타겟 디렉터리로 이동한다.
- - tasklist /FI "imagename eq notepad.exe" : notepad.exe 와 관련된 프로세스 목록들을 출력한다.
- - taskkill /PID 1516 : 프로세스 아이디가 1516인 프로세스를 강제 종료한다.
+ - ipconfig : 자신의 ip주소를 보여준다.
+ - <img width="790" height="189" alt="스크린샷 2025-10-22 112000" src="https://github.com/user-attachments/assets/8939441a-62bd-41ae-8b66-db80b70c217b" />
 
 
 ## 배운 점
